--- a/index2.html
+++ b/index2.html
@@ -79,12 +79,12 @@ W.W.Web coding by Foley Matthews (Foley U. Matthews, location Ipswich, Australia
 by email, click <A HREF="feedback.html">here</A> to find out how. To find out what happened to Paul 
 Tybislawski, click <A HREF="deedpoll.html"TARGET="_blank">here.</A><p>
 
-<a href="http://users.tpg.com.au/fumthings/myworks/index.html"TARGET="_blank">interesting works</a><P>
-<a href="http://users.tpg.com.au/fumthings/myworks/myenvironment.html"TARGET="_blank">interesting environment</a><P>
-<a href="http://users.tpg.com.au/fumthings/myworks/items.html"TARGET="_blank">interesting items for sale</a><P>
+<a href="/myworks/index.html"TARGET="_blank">interesting works</a><P>
+<a href="/myworks/myenvironment.html"TARGET="_blank">interesting environment</a><P>
+<a href="/myworks/items.html"TARGET="_blank">interesting items for sale</a><P>
 
-WebSpace Furnished Courtesy Of,  <a href="http://tpg.com.au/">
-tpg.com.au </a><p>
+WebSpace Furnished Courtesy Of,  <a href="http://github.com">
+github.com </a><p>
 
 <i>Disclaimer:-The opinions expressed herein are my own and do not reflect 
 those of my Employer or any of my Internet Service Providers. Material 
