--- a/index2.html
+++ b/index2.html
@@ -87,19 +87,10 @@ WebSpace Furnished Courtesy Of,  <a href="http://github.com">
 github.com </a><p>
 
 <i>Disclaimer:-The opinions expressed herein are my own and do not reflect 
-those of my Employer or any of my Internet Service Providers. Material 
-contained on these pages <br>may be covered by &copy Copyright. This is a non-
+those of my Employer or any of my Internet Service Providers. <br>Material 
+contained on these pages may be covered by &copy Copyright. <br>This is a non-
 profit presentation, please report any errors or omissions to the author.
 </i><p>
-
-<!--SCRIPT LANGUAGE="JavaScript"//-->
-
-<!--
-window.open ("newsflash.html",
-"newsflash","width=350,height=170,screenx=420,screeny=140,right=420,top=140");
-//-->
-
-<!--/SCRIPT//-->
 
 </BODY>
 </HTML>
