--- a/index2.html
+++ b/index2.html
@@ -25,17 +25,17 @@ Here are links to contemporary sources of Ellen Foley information...<p></h3>
 <TABLE BORDER WIDTH=440>
 <TD><ul><li>Ellen's own website <a href="https://ellenfoley.com/">ellenfoley.com</a><p>
 
-<li>facebook <a href="https://www.facebook.com/Ellen-Foley-43492125838/">the real Ellen Foley</a><p>
-<li>twitter <a href="https://twitter.com/ellenfoleynyc">Ellen Foley NYC</a><p>
-<li>myspace <a href="https://myspace.com/ellenfoley">Ellen Foley</a><p>
-<li>youtube <a href="https://www.youtube.com/results?search_query=ellen+foley">from "3 Girls 3" to singing and "About Time"</a><p>
-<li>imdb the internet movie database <a href="https://www.imdb.com/name/nm0284129/">movies AND television</a><p>
-<li>theatre <a href="https://www.ibdb.com/broadway-cast-staff/ellen-foley-12691">Broadway</a><p>
-<li>playbill.com <a href="http://www.playbill.com/searchpage/search?q=Ellen+Foley">Ellen Foley</a><p>
-<li>wikipedia <a href="https://en.wikipedia.org/wiki/Ellen_Foley">Ellen Foley</a><p>
-<li>lyrics <a href="https://www.elyrics.net/song/e/ellen-foley-lyrics.html">elyrics database</a><p>
+<li>facebook <a href="https://www.facebook.com/Ellen-Foley-43492125838/"TARGET="_blank">the real Ellen Foley</a><p>
+<li>twitter <a href="https://twitter.com/ellenfoleynyc"TARGET="_blank">Ellen Foley NYC</a><p>
+<li>myspace <a href="https://myspace.com/ellenfoley"TARGET="_blank">Ellen Foley</a><p>
+<li>youtube <a href="https://www.youtube.com/results?search_query=ellen+foley"TARGET="_blank">from "3 Girls 3" to singing and "About Time"</a><p>
+<li>imdb the internet movie database <a href="https://www.imdb.com/name/nm0284129/"TARGET="_blank">movies AND television</a><p>
+<li>theatre <a href="https://www.ibdb.com/broadway-cast-staff/ellen-foley-12691"TARGET="_blank">Broadway</a><p>
+<li>playbill.com <a href="http://www.playbill.com/searchpage/search?q=Ellen+Foley"TARGET="_blank">Ellen Foley</a><p>
+<li>wikipedia <a href="https://en.wikipedia.org/wiki/Ellen_Foley"TARGET="_blank">Ellen Foley</a><p>
+<li>lyrics <a href="https://www.elyrics.net/song/e/ellen-foley-lyrics.html"TARGET="_blank">elyrics database</a><p>
 
-<li>my collaborator, Sven Gusevik <a href="http://foleyzine.tripod.com">foleyzine.tripod.com </a> <p>
+<li>my collaborator, Sven Gusevik <a href="http://foleyzine.tripod.com"TARGET="_blank">foleyzine.tripod.com </a> <p>
 
 </ul> </TABLE> 
 <p><br></center>
@@ -69,7 +69,7 @@ Please click on these for...
 <p><br>
 
 <center>
-<a href="http://foleyzine.tripod.com"> <img SRC="pics/ef_banner.jpg" ALT="foleyzine.tripod.com"> </a> 
+<a href="http://foleyzine.tripod.com"TARGET="_blank"> <img SRC="pics/ef_banner.jpg" ALT="foleyzine.tripod.com"> </a> 
 </center>
 
 <br><br><p>
@@ -83,7 +83,7 @@ Tybislawski, click <A HREF="deedpoll.html"TARGET="_blank">here.</A><p>
 <a href="/myworks/myenvironment.html"TARGET="_blank">interesting environment</a><P>
 <a href="/myworks/items.html"TARGET="_blank">interesting items for sale</a><P>
 
-WebSpace Furnished Courtesy Of,  <a href="http://github.com">
+WebSpace Furnished Courtesy Of,  <a href="https://github.com"TARGET="_blank">
 github.com </a><p>
 
 <i>Disclaimer:-The opinions expressed herein are my own and do not reflect 
