--- a/efalbum.html
+++ b/efalbum.html
@@ -12,7 +12,7 @@ Related pages by other Web Authors<br>
 <A HREF="http://www.knownet.net/users/mgarnett/">Michael Garnett's page (Meat Loaf related)</A>,
 <A HREF="http://www.cruzio.com/~tilly83/meatloaf/meatloaf.html">Meat Loaf</A>, 
 <A HREF="http://www.qgm.com/meatloaf/">Meat Loaf</A>,  
-<A HREF="http://www.hiljaiset.sci.fi/punknet/foley_e.htm">punknet’s Ellen Foley</A>
+<A HREF="http://www.hiljaiset.sci.fi/punknet/foley_e.htm">punknet's Ellen Foley</A>
 <br><br><br>
 
 <a href="pics/ellen1.jpg"><img align=right SRC="pics/ellen1t.jpg" width=100 height=100></a>
