--- a/index2.html
+++ b/index2.html
@@ -23,7 +23,7 @@ Here are links to contemporary sources of Ellen Foley information...<p></h3>
 
 <center>
 <TABLE BORDER WIDTH=440>
-<TD><ul><li>Ellen's own website <a href="https://ellenfoley.com/">ellenfoley.com</a><p>
+<TD><ul><li>Ellen's own website <a href="https://ellenfoley.com/"TARGET="_blank">ellenfoley.com</a><p>
 
 <li>facebook <a href="https://www.facebook.com/people/Ellen-Foley/100063105015234/"TARGET="_blank">the real Ellen Foley</a><p>
 <li>twitter <a href="https://twitter.com/ellenfoleynyc"TARGET="_blank">Ellen Foley NYC</a><p>
