--- a/index2.html
+++ b/index2.html
@@ -47,14 +47,17 @@ Here are links to contemporary sources of Ellen Foley information...<p></h3>
 
 <a href="pics\ellen1.jpg"><img WIDTH=200 HEIGHT=198 HSPACE="20" align="left" SRC="pics/ellen1t.jpg" ALT="You are missing a GREAT picture of Ellen Foley"></a>
 "colours added to black and white photograph" as on the album cover
- <b>"Another Breath"</b> <img WIDTH=200 HEIGHT=198 HSPACE="20" align="right" SRC="pics/ellen1t.jpg" ALT="You are missing a GREAT picture of Ellen Foley"><BR>
+ <b>"Another Breath"</b> <a href="pics\ellen1.jpg"><img WIDTH=200 HEIGHT=198 HSPACE="20" align="left" SRC="pics/ellen1t.jpg" ALT="You are missing a GREAT picture
+  of Ellen Foley"></a><BR>
 
 Please click on these for...
 
 <TABLE BORDER WIDTH=440>
-<TD><ul><li><img WIDTH=43 HEIGHT=15 align="top" SRC="pics/new.gif" ALT="NEW"> ELLEN HAS A NEW CD!!! and a WEBSITE! <a href="http://www.ellenfoley.com">ellenfoley.com</a> <BR>
+<TD><ul><li><img WIDTH=43 HEIGHT=15 align="top" SRC="pics/new.gif" ALT="NEW"> ELLEN HAS A NEW CD!!! and a WEBSITE! <a href="https://www.ellenfoley.com"TARGET="_blank">
+ ellenfoley.com</a> <BR>
 
-<li><img WIDTH=43 HEIGHT=15 align="top" SRC="pics/new.gif" ALT="NEW"> BUY!...THE!...CD!!! Nightout has been re-released officially on <a href="http://www.woundedbird.com">Wounded Bird Records</a>, or order it in at your local record store, NOW! while there's still time.
+<li><img WIDTH=43 HEIGHT=15 align="top" SRC="pics/new.gif" ALT="NEW"> BUY!...THE!...CD!!! Nightout has been re-released officially on 
+ <a href="https://www.woundedbird.com"TARGET="_blank">Wounded Bird Records</a>, or order it in at your local record store, NOW! while there's still time.
 
 <li><a href="efdisc.html">Ellen's discography. </a> <BR>
 <li>Detailed <a href="efalbum.html">album</a> information. <BR>
