--- a/index2.html
+++ b/index2.html
@@ -47,8 +47,7 @@ Here are links to contemporary sources of Ellen Foley information...<p></h3>
 
 <a href="pics\ellen1.jpg"><img WIDTH=200 HEIGHT=198 HSPACE="20" align="left" SRC="pics/ellen1t.jpg" ALT="You are missing a GREAT picture of Ellen Foley"></a>
 "colours added to black and white photograph" as on the album cover
- <b>"Another Breath"</b> <a href="pics\ellen1.jpg"><img WIDTH=200 HEIGHT=198 HSPACE="20" align="left" SRC="pics/ellen1t.jpg" ALT="You are missing a GREAT picture
-  of Ellen Foley"></a><BR>
+ <b>"Another Breath"</b> <img WIDTH=200 HEIGHT=198 HSPACE="20" align="right" SRC="pics/ellen1t.jpg" ALT="You are missing a GREAT picture of Ellen Foley"><BR>
 
 Please click on these for...
 
