--- a/myworks/index.html
+++ b/myworks/index.html
@@ -32,8 +32,6 @@ directory in the state of Queensland in the nation of Australia. </p>
 
 <p><a href="myenvironment.html">environment</a> sustainability </p>
 
-<p><a href="rf tracing.html">rf tracing</a>
-
-<p><i>Web page Copyright © Foley U. Matthews 2004, 2006, 2020. </i></p>
+<p><i>Web page Copyright &copy Foley U. Matthews 2004, 2006, 2020. </i></p>
 </body>
 </html>
