--- a/myworks/wpeo.html
+++ b/myworks/wpeo.html
@@ -68,7 +68,7 @@ Will shield us from the fire.<br>
 You keep me safe.<br>
 We protect each other.<p>
 
-Copyright © Foley U. Matthews 2004<p>
+Copyright &copy Foley U. Matthews 2004<p>
 
 The right of Foley U. Matthews to be identified as the author of this work has been
  asserted in accordance with the Copyright Designs and Patents Act 1988<p>
