--- a/myworks/myenvironment2022.html
+++ b/myworks/myenvironment2022.html
@@ -25,64 +25,56 @@ Rainfall data from the undisclosed Ipswich location <p>
 <a href="myenvironment2012.html">2012,</a> <a href="myenvironment2013.html">2013,</a> <a href="myenvironment2014.html">2014,</a>
 <a href="myenvironment2015.html">2015,</a> <a href="myenvironment2016.html">2016,</a> <a href="myenvironment2017.html">2017,</a>
 <a href="myenvironment2018.html">2018,</a> <a href="myenvironment2019.html">2019,</a> <a href="myenvironment2020.html">2020,</a>
-<a href="myenvironment2021.html">2021,</a> <a href="myenvironment2022.html">2022,</a> <a href="myenvironment2023.html">2023,</a>
+<a href="myenvironment2021.html">2021,</a>
 
 
 <P>
 
-<a href="rain012024.csv"><img src="pics/gr012024.gif" ALT="GRAPH 01 2024"></a>
+<a href="rain012022.csv"><img src="pics/gr012022.gif" ALT="GRAPH 01 2022"></a>
 
 <P>
 
-<a href="rain022024.csv"><img src="pics/gr022024.gif" ALT="GRAPH 02 2024"></a>
+<a href="rain022022.csv"><img src="pics/gr022022.gif" ALT="GRAPH 02 2022"></a>
 
 <P>
 
-<a href="rain032024.csv"><img src="pics/gr032024.gif" ALT="GRAPH 03 2024"></a>
+<a href="rain032022.csv"><img src="pics/gr032022.gif" ALT="GRAPH 03 2022"></a>
 
 <P>
 
-<a href="rain042024.csv"><img src="pics/gr042024.gif" ALT="GRAPH 04 2024"></a>
+<a href="rain042022.csv"><img src="pics/gr042022.gif" ALT="GRAPH 04 2022"></a>
 
 <P>
 
-<a href="rain052024.csv"><img src="pics/gr052024.gif" ALT="GRAPH 05 2024"></a>
+<a href="rain052022.csv"><img src="pics/gr052022.gif" ALT="GRAPH 05 2022"></a>
 
 <P>
 
-<a href="rain062024.csv"><img src="pics/gr062024.gif" ALT="GRAPH 06 2024"></a>
+<a href="rain062022.csv"><img src="pics/gr062022.gif" ALT="GRAPH 06 2022"></a>
 
 <P>
 
-<a href="rain072024.csv"><img src="pics/gr072024.gif" ALT="GRAPH 07 2024"></a>
+<a href="rain072022.csv"><img src="pics/gr072022.gif" ALT="GRAPH 07 2022"></a>
 
 <P>
 
-<a href="rain082024.csv"><img src="pics/gr082024.gif" ALT="GRAPH 08 2024"></a>
+<a href="rain082022.csv"><img src="pics/gr082022.gif" ALT="GRAPH 08 2022"></a>
 
 <P>
 
-<a href="rain092024.csv"><img src="pics/gr092024.gif" ALT="GRAPH 09 2024"></a>
+<a href="rain092022.csv"><img src="pics/gr092022.gif" ALT="GRAPH 09 2022"></a>
 
 <P>
 
-<a href="rain102024.csv"><img src="pics/gr102024.gif" ALT="GRAPH 10 2024"></a>
+<a href="rain102022.csv"><img src="pics/gr102022.gif" ALT="GRAPH 10 2022"></a>
 
 <P>
 
-<a href="rain112024.csv"><img src="pics/gr112024.gif" ALT="GRAPH 11 2024"></a>
+<a href="rain112022.csv"><img src="pics/gr112022.gif" ALT="GRAPH 11 2022"></a>
 
 <P>
 
-<a href="rain122024.csv"><img src="pics/gr122024.gif" ALT="GRAPH 12 2024"></a>
-
-<P>
-
-<img src="pics/gr2024.gif" ALT="GRAPH 2024">
-
-<P>
-
-<img src="pics/gr2023.gif" ALT="GRAPH 2023">
+<a href="rain122022.csv"><img src="pics/gr122022.gif" ALT="GRAPH 12 2022"></a>
 
 <P>
 
@@ -162,7 +154,7 @@ PLEASE NOTE, that the last month displayed here is often incomplete and does not
 
 <P>
 
-<i>Web page Copyright &copy Foley U. Matthews 2005-2024.
+<i>Web page Copyright &copy Foley U. Matthews 2005-2022.
 </i>
 <p>
 
