--- a/myworks/myenvironment2023.html
+++ b/myworks/myenvironment2023.html
@@ -25,60 +25,56 @@ Rainfall data from the undisclosed Ipswich location <p>
 <a href="myenvironment2012.html">2012,</a> <a href="myenvironment2013.html">2013,</a> <a href="myenvironment2014.html">2014,</a>
 <a href="myenvironment2015.html">2015,</a> <a href="myenvironment2016.html">2016,</a> <a href="myenvironment2017.html">2017,</a>
 <a href="myenvironment2018.html">2018,</a> <a href="myenvironment2019.html">2019,</a> <a href="myenvironment2020.html">2020,</a>
-<a href="myenvironment2021.html">2021,</a> <a href="myenvironment2022.html">2022,</a> <a href="myenvironment2023.html">2023,</a>
+<a href="myenvironment2021.html">2021,</a> <a href="myenvironment2022.html">2022,</a>
 
 
 <P>
 
-<a href="rain012024.csv"><img src="pics/gr012024.gif" ALT="GRAPH 01 2024"></a>
+<a href="rain012023.csv"><img src="pics/gr012023.gif" ALT="GRAPH 01 2023"></a>
 
 <P>
 
-<a href="rain022024.csv"><img src="pics/gr022024.gif" ALT="GRAPH 02 2024"></a>
+<a href="rain022023.csv"><img src="pics/gr022023.gif" ALT="GRAPH 02 2023"></a>
 
 <P>
 
-<a href="rain032024.csv"><img src="pics/gr032024.gif" ALT="GRAPH 03 2024"></a>
+<a href="rain032023.csv"><img src="pics/gr032023.gif" ALT="GRAPH 03 2023"></a>
 
 <P>
 
-<a href="rain042024.csv"><img src="pics/gr042024.gif" ALT="GRAPH 04 2024"></a>
+<a href="rain042023.csv"><img src="pics/gr042023.gif" ALT="GRAPH 04 2023"></a>
 
 <P>
 
-<a href="rain052024.csv"><img src="pics/gr052024.gif" ALT="GRAPH 05 2024"></a>
+<a href="rain052023.csv"><img src="pics/gr052023.gif" ALT="GRAPH 05 2023"></a>
 
 <P>
 
-<a href="rain062024.csv"><img src="pics/gr062024.gif" ALT="GRAPH 06 2024"></a>
+<a href="rain062023.csv"><img src="pics/gr062023.gif" ALT="GRAPH 06 2023"></a>
 
 <P>
 
-<a href="rain072024.csv"><img src="pics/gr072024.gif" ALT="GRAPH 07 2024"></a>
+<a href="rain072023.csv"><img src="pics/gr072023.gif" ALT="GRAPH 07 2023"></a>
 
 <P>
 
-<a href="rain082024.csv"><img src="pics/gr082024.gif" ALT="GRAPH 08 2024"></a>
+<a href="rain082023.csv"><img src="pics/gr082023.gif" ALT="GRAPH 08 2023"></a>
 
 <P>
 
-<a href="rain092024.csv"><img src="pics/gr092024.gif" ALT="GRAPH 09 2024"></a>
+<a href="rain092023.csv"><img src="pics/gr092023.gif" ALT="GRAPH 09 2023"></a>
 
 <P>
 
-<a href="rain102024.csv"><img src="pics/gr102024.gif" ALT="GRAPH 10 2024"></a>
+<a href="rain102023.csv"><img src="pics/gr102023.gif" ALT="GRAPH 10 2023"></a>
 
 <P>
 
-<a href="rain112024.csv"><img src="pics/gr112024.gif" ALT="GRAPH 11 2024"></a>
+<a href="rain112023.csv"><img src="pics/gr112023.gif" ALT="GRAPH 11 2023"></a>
 
 <P>
 
-<a href="rain122024.csv"><img src="pics/gr122024.gif" ALT="GRAPH 12 2024"></a>
-
-<P>
-
-<img src="pics/gr2024.gif" ALT="GRAPH 2024">
+<a href="rain122023.csv"><img src="pics/gr122023.gif" ALT="GRAPH 12 2023"></a>
 
 <P>
 
@@ -162,7 +158,7 @@ PLEASE NOTE, that the last month displayed here is often incomplete and does not
 
 <P>
 
-<i>Web page Copyright &copy Foley U. Matthews 2005-2024.
+<i>Web page Copyright &copy Foley U. Matthews 2005-2023.
 </i>
 <p>
 
