website update 18 feb 2025

--- a/myworks/myenvironment.html
+++ b/myworks/myenvironment.html
@@ -26,55 +26,74 @@ Rainfall data from the undisclosed Ipswich location <p>
 <a href="myenvironment2015.html">2015,</a> <a href="myenvironment2016.html">2016,</a> <a href="myenvironment2017.html">2017,</a>
 <a href="myenvironment2018.html">2018,</a> <a href="myenvironment2019.html">2019,</a> <a href="myenvironment2020.html">2020,</a>
 <a href="myenvironment2021.html">2021,</a> <a href="myenvironment2022.html">2022,</a> <a href="myenvironment2023.html">2023,</a>
+<a href="myenvironment2024.html">2024,</a>
 
+<P><br>
+<P><br>
 
-<P>
+<center>
+My Rainfall Jan 2025<br>
+<img src="pics/gr012025.gif" ALT="GRAPH 01 2025">
 
-<a href="rain012024.csv"><img src="pics/gr012024.gif" ALT="GRAPH 01 2024"></a>
+<P><br>
+<P><br>
+My Rainfall Feb 2025<br>
+<img src="pics/gr022025.gif" ALT="GRAPH 02 2025">
 
-<P>
+<P><br>
+<P><br>
+My Rainfall Mar 2025<br>
+<img src="pics/gr032025.gif" ALT="GRAPH 03 2025">
 
-<a href="rain022024.csv"><img src="pics/gr022024.gif" ALT="GRAPH 02 2024"></a>
+<P><br>
+<P><br>
+My Rainfall Apr 2025<br>
+<img src="pics/gr042025.gif" ALT="GRAPH 04 2025">
 
-<P>
+<P><br>
+<P><br>
+My Rainfall May 2025<br>
+<img src="pics/gr052025.gif" ALT="GRAPH 05 2025">
 
-<a href="rain032024.csv"><img src="pics/gr032024.gif" ALT="GRAPH 03 2024"></a>
+<P><br>
+<P><br>
+My Rainfall Jun 2025<br>
+<img src="pics/gr062025.gif" ALT="GRAPH 06 2025">
 
-<P>
+<P><br>
+<P><br>
+My Rainfall Jul 2025<br>
+<img src="pics/gr072025.gif" ALT="GRAPH 07 2025">
 
-<a href="rain042024.csv"><img src="pics/gr042024.gif" ALT="GRAPH 04 2024"></a>
+<P><br>
+<P><br>
+My Rainfall Aug 2025<br>
+<img src="pics/gr082025.gif" ALT="GRAPH 08 2025">
 
-<P>
+<P><br>
+<P><br>
+My Rainfall Sep 2025<br>
+<img src="pics/gr092025.gif" ALT="GRAPH 09 2025">
 
-<a href="rain052024.csv"><img src="pics/gr052024.gif" ALT="GRAPH 05 2024"></a>
+<P><br>
+<P><br>
+My Rainfall Oct 2025<br>
+<img src="pics/gr102025.gif" ALT="GRAPH 10 2025">
 
-<P>
+<P><br>
+<P><br>
+My Rainfall Nov 2025<br>
+<img src="pics/gr112025.gif" ALT="GRAPH 11 2025">
 
-<a href="rain062024.csv"><img src="pics/gr062024.gif" ALT="GRAPH 06 2024"></a>
+<P><br>
+<P><br>
+My Rainfall Dec 2025<br>
+<img src="pics/gr122025.gif" ALT="GRAPH 12 2025">
 
-<P>
+<P><br>
+<P><br>
 
-<a href="rain072024.csv"><img src="pics/gr072024.gif" ALT="GRAPH 07 2024"></a>
-
-<P>
-
-<a href="rain082024.csv"><img src="pics/gr082024.gif" ALT="GRAPH 08 2024"></a>
-
-<P>
-
-<a href="rain092024.csv"><img src="pics/gr092024.gif" ALT="GRAPH 09 2024"></a>
-
-<P>
-
-<a href="rain102024.csv"><img src="pics/gr102024.gif" ALT="GRAPH 10 2024"></a>
-
-<P>
-
-<a href="rain112024.csv"><img src="pics/gr112024.gif" ALT="GRAPH 11 2024"></a>
-
-<P>
-
-<a href="rain122024.csv"><img src="pics/gr122024.gif" ALT="GRAPH 12 2024"></a>
+<a href="rain2025.csv"><img src="pics/gr2025.gif" ALT="GRAPH 2025"></a>
 
 <P>
 
@@ -155,14 +174,14 @@ Rainfall data from the undisclosed Ipswich location <p>
 <P>
 
 <img src="pics/gr2005.gif" ALT="GRAPH 2005">
-
+</center>
 <P>
 
 PLEASE NOTE, that the last month displayed here is often incomplete and does not show up to the minute results.
 
 <P>
 
-<i>Web page Copyright &copy Foley U. Matthews 2005-2024.
+<i>Web page Copyright &copy Foley U. Matthews 2005-2025.
 </i>
 <p>
 
