--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ movies, films, television, theatre, stage, musicals, career, credits, biography"
        <FRAME  SRC="index2.html" NAME="MAIN" SCROLLING="auto">
    <NOFRAMES>
 <BODY BGCOLOR="#E0E0FF" >
-
+<h1>Welcome to the Ellen Foley Information,</h1>
 This document contains frames. You can either get a copy of Netscape <A HREF="http://www.netscape.com">here</A>, 
 or view the lesser, no frames version <A HREF="index2.html">here</A>.
 </BODY>
