meta description update

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <TITLE>Ellen Foley Information</TITLE>
 <BASE TARGET="_top">
 
-<meta name=description content="Ellen Foley Music/Film/Movie/Television/Theatre Credits and Career 
+<meta name="description" content="Ellen Foley Music/Film/Movie/Television/Theatre Credits and Career 
 Information">
 <meta name=keywords content="Ellen Foley, music, records, albums, discography, cd, filmography, 
 movies, films, television, theatre, stage, musicals, career, credits, biography">
