--- a/menu.html
+++ b/menu.html
@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
 
-<meta name=description content="Ellen Foley Music/Film/Movie/Television/Theatre Credits and Career 
+<meta name="description" content="Ellen Foley Music/Film/Movie/Television/Theatre Credits and Career 
 Information">
 <meta name=keywords content="Ellen Foley, music, records, albums, discography, cd, filmography, 
 movies, films, television, theatre, stage, musicals, career, credits, biography">
