--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
 <HEAD>
 <TITLE>Ellen Foley Archived</TITLE>
 
-<meta name=description content="Ellen Foley Music/Film/Movie/Television/Theatre Credits and Career 
+<meta name="description" content="Ellen Foley Music/Film/Movie/Television/Theatre Credits and Career 
 Information">
 <meta name=keywords content="Ellen Foley, music, records, albums, discography, cd, filmography, 
 movies, films, television, theatre, stage, musicals, career, credits, biography">
