--- a/myworks/example.html
+++ b/myworks/example.html
@@ -3,15 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Year Information</title>
+	<meta name=description content="rainfall, environment, sustainability, ipswich, queensland, Foley Matthews, fumthings">
+	<meta name=keywords content="rainfall, environment, sustainability, ipswich, queensland, Foley Matthews, fumthings">
+    <title>Foley Matthews Information - "My Rainfall."</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<BODY BGCOLOR=#E0E0FF>
+<center><h1>Foley Matthews Information,<BR>
+"My Rainfall."</h1>
+
+<h4>Here is original stuff by me.</h4></center>
+<p>
+
+You can contact me via this <a href="feedback2.html">link</a> if you are wise enough.
+
+<P>
+
+Rainfall data from the undisclosed Ipswich location <p>
+
     <div id="years-container">
+        <a href="#" class="year" data-year="2005">2005</a>
+        <a href="#" class="year" data-year="2006">2006</a>
+        <a href="#" class="year" data-year="2007">2007</a>
+        <a href="#" class="year" data-year="2008">2008</a>
+	<a href="#" class="year" data-year="2009">2009</a>
+	<a href="#" class="year" data-year="2010">2010</a>
+        <a href="#" class="year" data-year="2011">2011</a>
+        <a href="#" class="year" data-year="2012">2012</a>
+        <a href="#" class="year" data-year="2013">2013</a>
+	<a href="#" class="year" data-year="2014">2014</a>
+        <a href="#" class="year" data-year="2015">2015</a>
+        <a href="#" class="year" data-year="2016">2016</a>
+        <a href="#" class="year" data-year="2017">2017</a>
+	<a href="#" class="year" data-year="2018">2018</a>
+        <a href="#" class="year" data-year="2019">2019</a>
         <a href="#" class="year" data-year="2020">2020</a>
         <a href="#" class="year" data-year="2021">2021</a>
         <a href="#" class="year" data-year="2022">2022</a>
         <a href="#" class="year" data-year="2023">2023</a>
+	<a href="#" class="year" data-year="2024">2024</a>
+	<a href="#" class="year" data-year="2025">2025</a>
+	<a href="#" class="year" data-year="2026">2026</a>
+	<a href="#" class="year" data-year="2027">2027</a>
+	<a href="#" class="year" data-year="2028">2028</a>
+	<a href="#" class="year" data-year="2029">2029</a>
+	<a href="#" class="year" data-year="2030">2030</a>
     </div>
     
     <div id="year-info">
