--- a/myworks/example.html
+++ b/myworks/example.html
@@ -32,7 +32,7 @@ Rainfall data from the undisclosed Ipswich location <p>
         <a href="#" class="year" data-year="2012">2012</a>
         <a href="#" class="year" data-year="2013">2013</a>
 	<a href="#" class="year" data-year="2014">2014</a>
-        <a href="#" class="year" data-year="2015">2015</a><br>
+        <a href="#" class="year" data-year="2015">2015</a>
         <a href="#" class="year" data-year="2016">2016</a>
         <a href="#" class="year" data-year="2017">2017</a>
 	<a href="#" class="year" data-year="2018">2018</a>
