--- a/myworks/myenvironment2024.html
+++ b/myworks/myenvironment2024.html
@@ -6,7 +6,7 @@
 <meta name=keywords content="rainfall, environment, sustainability, ipswich, queensland, Foley Matthews, fumthings">
 
 </HEAD>
-<BODY BGCOLOR=#E0E0FF>
+<body style="background-color: #E0E0FF;">
 <center><h1>Foley Matthews Information,<BR>
 "My Rainfall."</h1>
 
