--- a/myworks/example.html
+++ b/myworks/example.html
@@ -9,20 +9,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
+<body>
 <header>
-<h1>Foley Matthews Information,<BR>
+<h1>Foley Matthews Information,<br>
 "My Rainfall."</h1>
 
 <h4>Here is original stuff by me.</h4>
-<p>
 </header>
 
-<body>
-You can contact me via this <a href="feedback2.html">link</a> if you are wise enough.
+<p>You can contact me via this <a href="feedback2.html">link</a> if you are wise enough.</p>
 
-<P>
-
-Rainfall data from the undisclosed Ipswich location </p>
+<p>Rainfall data from the undisclosed Ipswich location </p>
 
     <div id="years-container">
 	<ul>
