--- a/myworks/example.html
+++ b/myworks/example.html
@@ -22,7 +22,7 @@
 <p>Rainfall data from the undisclosed Ipswich location </p>
 
     <div id="years-container">
-	<ul>
+	<ul class="year-links">
         	<li><a href="#" class="year" data-year="2005">2005</a></li>
        		<li><a href="#" class="year" data-year="2006">2006</a></li>
         	<li><a href="#" class="year" data-year="2007">2007</a></li>
