--- a/myworks/myenvironment2025.html
+++ b/myworks/myenvironment2025.html
@@ -1,13 +1,19 @@
-<HTML>
-<HEAD>
-<title>Foley Matthews Information - "My Rainfall."</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
 
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name=description content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
 <meta name=keywords content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
+<meta name="author" content="Foley Matthews">
 
-</HEAD>
-<BODY>
-<center>
+<title>Foley Matthews Information - "My Rainfall."</title>
+<link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+<main>
 My Rainfall Jan 2025<br>
 <img src="pics/gr012025.gif" ALT="GRAPH 01 2025">
 
@@ -150,9 +156,9 @@ My Rainfall Dec 2025<br>
 <P>
 
 <img src="pics/gr2005.gif" ALT="GRAPH 2005">
-</center>
+</main>
 <P>
-
+<footer>
 PLEASE NOTE, that the last month displayed here is often incomplete and does not show up to the minute results.
 
 <P>
@@ -160,9 +166,9 @@ PLEASE NOTE, that the last month displayed here is often incomplete and does not
 <i>Web page Copyright &copy Foley U. Matthews 2005-2025.
 </i>
 <p>
-
-</BODY>
-</HTML>	
+</footer>
+</body>
+</html>	
 
 
 
