--- a/myworks/myenvironment2025.html
+++ b/myworks/myenvironment2025.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<main>
+<graphs-main>
 My Rainfall Jan 2025<br>
 <img src="pics/gr012025.gif" ALT="GRAPH 01 2025">
 
@@ -156,7 +156,7 @@ My Rainfall Dec 2025<br>
 <P>
 
 <img src="pics/gr2005.gif" ALT="GRAPH 2005">
-</main>
+</graphs-main>
 <P>
 <footer>
 PLEASE NOTE, that the last month displayed here is often incomplete and does not show up to the minute results.
