--- a/myworks/myenvironment2025.html
+++ b/myworks/myenvironment2025.html
@@ -13,7 +13,8 @@
 </head>
 
 <body>
-<graphs-main>
+<main>
+<section id="rainfall-graphs">
 My Rainfall Jan 2025<br>
 <img src="pics/gr012025.gif" ALT="GRAPH 01 2025">
 
@@ -156,7 +157,8 @@ My Rainfall Dec 2025<br>
 <P>
 
 <img src="pics/gr2005.gif" ALT="GRAPH 2005">
-</graphs-main>
+</section>
+</main>
 <P>
 <footer>
 PLEASE NOTE, that the last month displayed here is often incomplete and does not show up to the minute results.
