--- a/myworks/myenvironment2025.html
+++ b/myworks/myenvironment2025.html
@@ -15,17 +15,17 @@
 <body>
 <main>
 <section id="rainfall-graphs">
-My Rainfall Jan 2025<br>
+My Rainfall Jan 2025<p>
 <img src="pics/gr012025.gif" ALT="GRAPH 01 2025">
 
 <P><br>
 <P><br>
-My Rainfall Feb 2025<br>
+My Rainfall Feb 2025<p>
 <img src="pics/gr022025.gif" ALT="GRAPH 02 2025">
 
 <P><br>
 <P><br>
-My Rainfall Mar 2025<br>
+My Rainfall Mar 2025<p>
 <img src="pics/gr032025.gif" ALT="GRAPH 03 2025">
 
 <P><br>
