--- a/myworks/myenvironment2023.html
+++ b/myworks/myenvironment2023.html
@@ -1,197 +1,57 @@
-<HTML>
-<HEAD>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name=description content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
+<meta name=keywords content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
+<meta name="author" content="Foley Matthews">
 <title>Foley Matthews Information - "My Rainfall."</title>
+<link rel="stylesheet" href="styles.css">
+</head>
 
-<meta name=description content="rainfall, environment, sustainability, ipswich, queensland, Foley Matthews, fumthings">
-<meta name=keywords content="rainfall, environment, sustainability, ipswich, queensland, Foley Matthews, fumthings">
-
-</HEAD>
-<BODY BGCOLOR=#E0E0FF>
-<center><h1>Foley Matthews Information,<BR>
-"My Rainfall."</h1>
-
-<h4>Here is original stuff by me.</h4></center>
-<p>
-
-You can contact me via this <a href="feedback2.html">link</a> if you are wise enough.
-
-<P>
-
-Rainfall data from the undisclosed Ipswich location <p>
-
-<b>Previous Years...</b> <a href="myenvironment2005.html">2005,</a>
-<a href="myenvironment2006.html">2006,</a> <a href="myenvironment2007.html">2007,</a> <a href="myenvironment2008.html">2008,</a>
-<a href="myenvironment2009.html">2009,</a> <a href="myenvironment2010.html">2010,</a> <a href="myenvironment2011.html">2011,</a>
-<a href="myenvironment2012.html">2012,</a> <a href="myenvironment2013.html">2013,</a> <a href="myenvironment2014.html">2014,</a>
-<a href="myenvironment2015.html">2015,</a> <a href="myenvironment2016.html">2016,</a> <a href="myenvironment2017.html">2017,</a>
-<a href="myenvironment2018.html">2018,</a> <a href="myenvironment2019.html">2019,</a> <a href="myenvironment2020.html">2020,</a>
-<a href="myenvironment2021.html">2021,</a> <a href="myenvironment2022.html">2022,</a>
-
-
-<P>
-
+<body>
+<main>
+<section id="rainfall-graphs">
 <a href="rain012023.csv"><img src="pics/gr012023.gif" ALT="GRAPH 01 2023"></a>
-
-<P>
-
 <a href="rain022023.csv"><img src="pics/gr022023.gif" ALT="GRAPH 02 2023"></a>
-
-<P>
-
 <a href="rain032023.csv"><img src="pics/gr032023.gif" ALT="GRAPH 03 2023"></a>
-
-<P>
-
 <a href="rain042023.csv"><img src="pics/gr042023.gif" ALT="GRAPH 04 2023"></a>
-
-<P>
-
 <a href="rain052023.csv"><img src="pics/gr052023.gif" ALT="GRAPH 05 2023"></a>
-
-<P>
-
 <a href="rain062023.csv"><img src="pics/gr062023.gif" ALT="GRAPH 06 2023"></a>
-
-<P>
-
 <a href="rain072023.csv"><img src="pics/gr072023.gif" ALT="GRAPH 07 2023"></a>
-
-<P>
-
 <a href="rain082023.csv"><img src="pics/gr082023.gif" ALT="GRAPH 08 2023"></a>
-
-<P>
-
 <a href="rain092023.csv"><img src="pics/gr092023.gif" ALT="GRAPH 09 2023"></a>
-
-<P>
-
 <a href="rain102023.csv"><img src="pics/gr102023.gif" ALT="GRAPH 10 2023"></a>
-
-<P>
-
 <a href="rain112023.csv"><img src="pics/gr112023.gif" ALT="GRAPH 11 2023"></a>
-
-<P>
-
 <a href="rain122023.csv"><img src="pics/gr122023.gif" ALT="GRAPH 12 2023"></a>
-
-<P>
-
 <img src="pics/gr2023.gif" ALT="GRAPH 2023">
-
-<P>
-
 <img src="pics/gr2022.gif" ALT="GRAPH 2022">
-
-<P>
-
 <img src="pics/gr2021.gif" ALT="GRAPH 2021">
-
-<P>
-
 <img src="pics/gr2020.gif" ALT="GRAPH 2020">
-
-<P>
-
 <img src="pics/gr2019.gif" ALT="GRAPH 2019">
-
-<P>
-
 <img src="pics/gr2018.gif" ALT="GRAPH 2018">
-
-<P>
-
 <img src="pics/gr2017.gif" ALT="GRAPH 2017">
-
-<P>
-
 <img src="pics/gr2016.gif" ALT="GRAPH 2016">
-
-<P>
-
 <img src="pics/gr2015.gif" ALT="GRAPH 2015">
-
-<P>
-
 <img src="pics/gr2014.gif" ALT="GRAPH 2014">
-
-<P>
-
 <img src="pics/gr2013.gif" ALT="GRAPH 2013">
-
-<P>
-
 <img src="pics/gr2012.gif" ALT="GRAPH 2012">
-
-<P>
-
 <img src="pics/gr2011.gif" ALT="GRAPH 2011">
-
-<P>
-
 <img src="pics/gr2010.gif" ALT="GRAPH 2010">
-
-<P>
-
 <img src="pics/gr2009.gif" ALT="GRAPH 2009">
-
-<P>
-
 <img src="pics/gr2008.gif" ALT="GRAPH 2008">
-
-<P>
-
 <img src="pics/gr2007.gif" ALT="GRAPH 2007">
-
-<P>
-
 <img src="pics/gr2006.gif" ALT="GRAPH 2006">
-
-<P>
-
 <img src="pics/gr2005.gif" ALT="GRAPH 2005">
+</section>
+</main>
 
-<P>
-
+<footer>
 PLEASE NOTE, that the last month displayed here is often incomplete and does not show up to the minute results.
-
-<P>
-
-<i>Web page Copyright &copy Foley U. Matthews 2005-2023.
-</i>
-<p>
-
-</BODY>
-</HTML>	
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<p><i>Web page Copyright &copy Foley U. Matthews 2005-2023.
+</i></p>
+</footer>
+</body>
+</html>	
 
