--- a/myworks/myenvironment2023.html
+++ b/myworks/myenvironment2023.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name=description content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
-<meta name=keywords content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
+<meta name="description" content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
+<meta name="keywords" content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
 <meta name="author" content="Foley Matthews">
 <title>Foley Matthews Information - "My Rainfall."</title>
 <link rel="stylesheet" href="styles.css">
@@ -49,7 +49,7 @@
 
 <footer>
 PLEASE NOTE, that the last month displayed here is often incomplete and does not show up to the minute results.
-<p><i>Web page Copyright &copy Foley U. Matthews 2005-2023.
+<p><i>Web page Copyright &copy; Foley U. Matthews 2005-2023.
 </i></p>
 </footer>
 </body>
