--- a/myworks/myenvironment2022.html
+++ b/myworks/myenvironment2022.html
@@ -13,36 +13,36 @@
 <body>
 <main>
 <section id="rainfall-graphs">
-<a href="rain012022.csv"><img src="pics/gr012022.gif" ALT="GRAPH 01 2022"></a>
-<a href="rain022022.csv"><img src="pics/gr022022.gif" ALT="GRAPH 02 2022"></a>
-<a href="rain032022.csv"><img src="pics/gr032022.gif" ALT="GRAPH 03 2022"></a>
-<a href="rain042022.csv"><img src="pics/gr042022.gif" ALT="GRAPH 04 2022"></a>
-<a href="rain052022.csv"><img src="pics/gr052022.gif" ALT="GRAPH 05 2022"></a>
-<a href="rain062022.csv"><img src="pics/gr062022.gif" ALT="GRAPH 06 2022"></a>
-<a href="rain072022.csv"><img src="pics/gr072022.gif" ALT="GRAPH 07 2022"></a>
-<a href="rain082022.csv"><img src="pics/gr082022.gif" ALT="GRAPH 08 2022"></a>
-<a href="rain092022.csv"><img src="pics/gr092022.gif" ALT="GRAPH 09 2022"></a>
-<a href="rain102022.csv"><img src="pics/gr102022.gif" ALT="GRAPH 10 2022"></a>
-<a href="rain112022.csv"><img src="pics/gr112022.gif" ALT="GRAPH 11 2022"></a>
-<a href="rain122022.csv"><img src="pics/gr122022.gif" ALT="GRAPH 12 2022"></a>
-<img src="pics/gr2022.gif" ALT="GRAPH 2022">
-<img src="pics/gr2021.gif" ALT="GRAPH 2021">
-<img src="pics/gr2020.gif" ALT="GRAPH 2020">
-<img src="pics/gr2019.gif" ALT="GRAPH 2019">
-<img src="pics/gr2018.gif" ALT="GRAPH 2018">
-<img src="pics/gr2017.gif" ALT="GRAPH 2017">
-<img src="pics/gr2016.gif" ALT="GRAPH 2016">
-<img src="pics/gr2015.gif" ALT="GRAPH 2015">
-<img src="pics/gr2014.gif" ALT="GRAPH 2014">
-<img src="pics/gr2013.gif" ALT="GRAPH 2013">
-<img src="pics/gr2012.gif" ALT="GRAPH 2012">
-<img src="pics/gr2011.gif" ALT="GRAPH 2011">
-<img src="pics/gr2010.gif" ALT="GRAPH 2010">
-<img src="pics/gr2009.gif" ALT="GRAPH 2009">
-<img src="pics/gr2008.gif" ALT="GRAPH 2008">
-<img src="pics/gr2007.gif" ALT="GRAPH 2007">
-<img src="pics/gr2006.gif" ALT="GRAPH 2006">
-<img src="pics/gr2005.gif" ALT="GRAPH 2005">
+<a href="rain012022.csv"><img src="pics/gr012022.gif" alt="GRAPH 01 2022"></a>
+<a href="rain022022.csv"><img src="pics/gr022022.gif" alt="GRAPH 02 2022"></a>
+<a href="rain032022.csv"><img src="pics/gr032022.gif" alt="GRAPH 03 2022"></a>
+<a href="rain042022.csv"><img src="pics/gr042022.gif" alt="GRAPH 04 2022"></a>
+<a href="rain052022.csv"><img src="pics/gr052022.gif" alt="GRAPH 05 2022"></a>
+<a href="rain062022.csv"><img src="pics/gr062022.gif" alt="GRAPH 06 2022"></a>
+<a href="rain072022.csv"><img src="pics/gr072022.gif" alt="GRAPH 07 2022"></a>
+<a href="rain082022.csv"><img src="pics/gr082022.gif" alt="GRAPH 08 2022"></a>
+<a href="rain092022.csv"><img src="pics/gr092022.gif" alt="GRAPH 09 2022"></a>
+<a href="rain102022.csv"><img src="pics/gr102022.gif" alt="GRAPH 10 2022"></a>
+<a href="rain112022.csv"><img src="pics/gr112022.gif" alt="GRAPH 11 2022"></a>
+<a href="rain122022.csv"><img src="pics/gr122022.gif" alt="GRAPH 12 2022"></a>
+<img src="pics/gr2022.gif" alt="GRAPH 2022">
+<img src="pics/gr2021.gif" alt="GRAPH 2021">
+<img src="pics/gr2020.gif" alt="GRAPH 2020">
+<img src="pics/gr2019.gif" alt="GRAPH 2019">
+<img src="pics/gr2018.gif" alt="GRAPH 2018">
+<img src="pics/gr2017.gif" alt="GRAPH 2017">
+<img src="pics/gr2016.gif" alt="GRAPH 2016">
+<img src="pics/gr2015.gif" alt="GRAPH 2015">
+<img src="pics/gr2014.gif" alt="GRAPH 2014">
+<img src="pics/gr2013.gif" alt="GRAPH 2013">
+<img src="pics/gr2012.gif" alt="GRAPH 2012">
+<img src="pics/gr2011.gif" alt="GRAPH 2011">
+<img src="pics/gr2010.gif" alt="GRAPH 2010">
+<img src="pics/gr2009.gif" alt="GRAPH 2009">
+<img src="pics/gr2008.gif" alt="GRAPH 2008">
+<img src="pics/gr2007.gif" alt="GRAPH 2007">
+<img src="pics/gr2006.gif" alt="GRAPH 2006">
+<img src="pics/gr2005.gif" alt="GRAPH 2005">
 </section>
 </main>
 
