--- a/myworks/myenvironment2023.html
+++ b/myworks/myenvironment2023.html
@@ -13,37 +13,37 @@
 <body>
 <main>
 <section id="rainfall-graphs">
-<a href="rain012023.csv"><img src="pics/gr012023.gif" ALT="GRAPH 01 2023"></a>
-<a href="rain022023.csv"><img src="pics/gr022023.gif" ALT="GRAPH 02 2023"></a>
-<a href="rain032023.csv"><img src="pics/gr032023.gif" ALT="GRAPH 03 2023"></a>
-<a href="rain042023.csv"><img src="pics/gr042023.gif" ALT="GRAPH 04 2023"></a>
-<a href="rain052023.csv"><img src="pics/gr052023.gif" ALT="GRAPH 05 2023"></a>
-<a href="rain062023.csv"><img src="pics/gr062023.gif" ALT="GRAPH 06 2023"></a>
-<a href="rain072023.csv"><img src="pics/gr072023.gif" ALT="GRAPH 07 2023"></a>
-<a href="rain082023.csv"><img src="pics/gr082023.gif" ALT="GRAPH 08 2023"></a>
-<a href="rain092023.csv"><img src="pics/gr092023.gif" ALT="GRAPH 09 2023"></a>
-<a href="rain102023.csv"><img src="pics/gr102023.gif" ALT="GRAPH 10 2023"></a>
-<a href="rain112023.csv"><img src="pics/gr112023.gif" ALT="GRAPH 11 2023"></a>
-<a href="rain122023.csv"><img src="pics/gr122023.gif" ALT="GRAPH 12 2023"></a>
-<img src="pics/gr2023.gif" ALT="GRAPH 2023">
-<img src="pics/gr2022.gif" ALT="GRAPH 2022">
-<img src="pics/gr2021.gif" ALT="GRAPH 2021">
-<img src="pics/gr2020.gif" ALT="GRAPH 2020">
-<img src="pics/gr2019.gif" ALT="GRAPH 2019">
-<img src="pics/gr2018.gif" ALT="GRAPH 2018">
-<img src="pics/gr2017.gif" ALT="GRAPH 2017">
-<img src="pics/gr2016.gif" ALT="GRAPH 2016">
-<img src="pics/gr2015.gif" ALT="GRAPH 2015">
-<img src="pics/gr2014.gif" ALT="GRAPH 2014">
-<img src="pics/gr2013.gif" ALT="GRAPH 2013">
-<img src="pics/gr2012.gif" ALT="GRAPH 2012">
-<img src="pics/gr2011.gif" ALT="GRAPH 2011">
-<img src="pics/gr2010.gif" ALT="GRAPH 2010">
-<img src="pics/gr2009.gif" ALT="GRAPH 2009">
-<img src="pics/gr2008.gif" ALT="GRAPH 2008">
-<img src="pics/gr2007.gif" ALT="GRAPH 2007">
-<img src="pics/gr2006.gif" ALT="GRAPH 2006">
-<img src="pics/gr2005.gif" ALT="GRAPH 2005">
+<a href="rain012023.csv"><img src="pics/gr012023.gif" alt="GRAPH 01 2023"></a>
+<a href="rain022023.csv"><img src="pics/gr022023.gif" alt="GRAPH 02 2023"></a>
+<a href="rain032023.csv"><img src="pics/gr032023.gif" alt="GRAPH 03 2023"></a>
+<a href="rain042023.csv"><img src="pics/gr042023.gif" alt="GRAPH 04 2023"></a>
+<a href="rain052023.csv"><img src="pics/gr052023.gif" alt="GRAPH 05 2023"></a>
+<a href="rain062023.csv"><img src="pics/gr062023.gif" alt="GRAPH 06 2023"></a>
+<a href="rain072023.csv"><img src="pics/gr072023.gif" alt="GRAPH 07 2023"></a>
+<a href="rain082023.csv"><img src="pics/gr082023.gif" alt="GRAPH 08 2023"></a>
+<a href="rain092023.csv"><img src="pics/gr092023.gif" alt="GRAPH 09 2023"></a>
+<a href="rain102023.csv"><img src="pics/gr102023.gif" alt="GRAPH 10 2023"></a>
+<a href="rain112023.csv"><img src="pics/gr112023.gif" alt="GRAPH 11 2023"></a>
+<a href="rain122023.csv"><img src="pics/gr122023.gif" alt="GRAPH 12 2023"></a>
+<img src="pics/gr2023.gif" alt="GRAPH 2023">
+<img src="pics/gr2022.gif" alt="GRAPH 2022">
+<img src="pics/gr2021.gif" alt="GRAPH 2021">
+<img src="pics/gr2020.gif" alt="GRAPH 2020">
+<img src="pics/gr2019.gif" alt="GRAPH 2019">
+<img src="pics/gr2018.gif" alt="GRAPH 2018">
+<img src="pics/gr2017.gif" alt="GRAPH 2017">
+<img src="pics/gr2016.gif" alt="GRAPH 2016">
+<img src="pics/gr2015.gif" alt="GRAPH 2015">
+<img src="pics/gr2014.gif" alt="GRAPH 2014">
+<img src="pics/gr2013.gif" alt="GRAPH 2013">
+<img src="pics/gr2012.gif" alt="GRAPH 2012">
+<img src="pics/gr2011.gif" alt="GRAPH 2011">
+<img src="pics/gr2010.gif" alt="GRAPH 2010">
+<img src="pics/gr2009.gif" alt="GRAPH 2009">
+<img src="pics/gr2008.gif" alt="GRAPH 2008">
+<img src="pics/gr2007.gif" alt="GRAPH 2007">
+<img src="pics/gr2006.gif" alt="GRAPH 2006">
+<img src="pics/gr2005.gif" alt="GRAPH 2005">
 </section>
 </main>
 
