--- a/myworks/myenvironment2024.html
+++ b/myworks/myenvironment2024.html
@@ -13,38 +13,38 @@
 <body>
 <main>
 <section id="rainfall-graphs">
-<a href="rain012024.csv"><img src="pics/gr012024.gif" ALT="GRAPH 01 2024"></a>
-<a href="rain022024.csv"><img src="pics/gr022024.gif" ALT="GRAPH 02 2024"></a>
-<a href="rain032024.csv"><img src="pics/gr032024.gif" ALT="GRAPH 03 2024"></a>
-<a href="rain042024.csv"><img src="pics/gr042024.gif" ALT="GRAPH 04 2024"></a>
-<a href="rain052024.csv"><img src="pics/gr052024.gif" ALT="GRAPH 05 2024"></a>
-<a href="rain062024.csv"><img src="pics/gr062024.gif" ALT="GRAPH 06 2024"></a>
-<a href="rain072024.csv"><img src="pics/gr072024.gif" ALT="GRAPH 07 2024"></a>
-<a href="rain082024.csv"><img src="pics/gr082024.gif" ALT="GRAPH 08 2024"></a>
-<a href="rain092024.csv"><img src="pics/gr092024.gif" ALT="GRAPH 09 2024"></a>
-<a href="rain102024.csv"><img src="pics/gr102024.gif" ALT="GRAPH 10 2024"></a>
-<a href="rain112024.csv"><img src="pics/gr112024.gif" ALT="GRAPH 11 2024"></a>
-<a href="rain122024.csv"><img src="pics/gr122024.gif" ALT="GRAPH 12 2024"></a>
-<img src="pics/gr2024.gif" ALT="GRAPH 2024">
-<img src="pics/gr2023.gif" ALT="GRAPH 2023">
-<img src="pics/gr2022.gif" ALT="GRAPH 2022">
-<img src="pics/gr2021.gif" ALT="GRAPH 2021">
-<img src="pics/gr2020.gif" ALT="GRAPH 2020">
-<img src="pics/gr2019.gif" ALT="GRAPH 2019">
-<img src="pics/gr2018.gif" ALT="GRAPH 2018">
-<img src="pics/gr2017.gif" ALT="GRAPH 2017">
-<img src="pics/gr2016.gif" ALT="GRAPH 2016">
-<img src="pics/gr2015.gif" ALT="GRAPH 2015">
-<img src="pics/gr2014.gif" ALT="GRAPH 2014">
-<img src="pics/gr2013.gif" ALT="GRAPH 2013">
-<img src="pics/gr2012.gif" ALT="GRAPH 2012">
-<img src="pics/gr2011.gif" ALT="GRAPH 2011">
-<img src="pics/gr2010.gif" ALT="GRAPH 2010">
-<img src="pics/gr2009.gif" ALT="GRAPH 2009">
-<img src="pics/gr2008.gif" ALT="GRAPH 2008">
-<img src="pics/gr2007.gif" ALT="GRAPH 2007">
-<img src="pics/gr2006.gif" ALT="GRAPH 2006">
-<img src="pics/gr2005.gif" ALT="GRAPH 2005">
+<a href="rain012024.csv"><img src="pics/gr012024.gif" alt="GRAPH 01 2024"></a>
+<a href="rain022024.csv"><img src="pics/gr022024.gif" alt="GRAPH 02 2024"></a>
+<a href="rain032024.csv"><img src="pics/gr032024.gif" alt="GRAPH 03 2024"></a>
+<a href="rain042024.csv"><img src="pics/gr042024.gif" alt="GRAPH 04 2024"></a>
+<a href="rain052024.csv"><img src="pics/gr052024.gif" alt="GRAPH 05 2024"></a>
+<a href="rain062024.csv"><img src="pics/gr062024.gif" alt="GRAPH 06 2024"></a>
+<a href="rain072024.csv"><img src="pics/gr072024.gif" alt="GRAPH 07 2024"></a>
+<a href="rain082024.csv"><img src="pics/gr082024.gif" alt="GRAPH 08 2024"></a>
+<a href="rain092024.csv"><img src="pics/gr092024.gif" alt="GRAPH 09 2024"></a>
+<a href="rain102024.csv"><img src="pics/gr102024.gif" alt="GRAPH 10 2024"></a>
+<a href="rain112024.csv"><img src="pics/gr112024.gif" alt="GRAPH 11 2024"></a>
+<a href="rain122024.csv"><img src="pics/gr122024.gif" alt="GRAPH 12 2024"></a>
+<img src="pics/gr2024.gif" alt="GRAPH 2024">
+<img src="pics/gr2023.gif" alt="GRAPH 2023">
+<img src="pics/gr2022.gif" alt="GRAPH 2022">
+<img src="pics/gr2021.gif" alt="GRAPH 2021">
+<img src="pics/gr2020.gif" alt="GRAPH 2020">
+<img src="pics/gr2019.gif" alt="GRAPH 2019">
+<img src="pics/gr2018.gif" alt="GRAPH 2018">
+<img src="pics/gr2017.gif" alt="GRAPH 2017">
+<img src="pics/gr2016.gif" alt="GRAPH 2016">
+<img src="pics/gr2015.gif" alt="GRAPH 2015">
+<img src="pics/gr2014.gif" alt="GRAPH 2014">
+<img src="pics/gr2013.gif" alt="GRAPH 2013">
+<img src="pics/gr2012.gif" alt="GRAPH 2012">
+<img src="pics/gr2011.gif" alt="GRAPH 2011">
+<img src="pics/gr2010.gif" alt="GRAPH 2010">
+<img src="pics/gr2009.gif" alt="GRAPH 2009">
+<img src="pics/gr2008.gif" alt="GRAPH 2008">
+<img src="pics/gr2007.gif" alt="GRAPH 2007">
+<img src="pics/gr2006.gif" alt="GRAPH 2006">
+<img src="pics/gr2005.gif" alt="GRAPH 2005">
 </section>
 </main>
 
