--- a/myworks/myenvironment2025.html
+++ b/myworks/myenvironment2025.html
@@ -14,50 +14,50 @@
 <main>
 <section id="rainfall-graphs">
 My Rainfall Jan 2025
-<img src="pics/gr012025.gif" ALT="GRAPH 01 2025">
+<img src="pics/gr012025.gif" alt="GRAPH 01 2025">
 My Rainfall Feb 2025
-<img src="pics/gr022025.gif" ALT="GRAPH 02 2025">
+<img src="pics/gr022025.gif" alt="GRAPH 02 2025">
 My Rainfall Mar 2025
-<img src="pics/gr032025.gif" ALT="GRAPH 03 2025">
+<img src="pics/gr032025.gif" alt="GRAPH 03 2025">
 My Rainfall Apr 2025
-<img src="pics/gr042025.gif" ALT="GRAPH 04 2025">
+<img src="pics/gr042025.gif" alt="GRAPH 04 2025">
 My Rainfall May 2025
-<img src="pics/gr052025.gif" ALT="GRAPH 05 2025">
+<img src="pics/gr052025.gif" alt="GRAPH 05 2025">
 My Rainfall Jun 2025
-<img src="pics/gr062025.gif" ALT="GRAPH 06 2025">
+<img src="pics/gr062025.gif" alt="GRAPH 06 2025">
 My Rainfall Jul 2025
-<img src="pics/gr072025.gif" ALT="GRAPH 07 2025">
+<img src="pics/gr072025.gif" alt="GRAPH 07 2025">
 My Rainfall Aug 2025
-<img src="pics/gr082025.gif" ALT="GRAPH 08 2025">
+<img src="pics/gr082025.gif" alt="GRAPH 08 2025">
 My Rainfall Sep 2025
-<img src="pics/gr092025.gif" ALT="GRAPH 09 2025">
+<img src="pics/gr092025.gif" alt="GRAPH 09 2025">
 My Rainfall Oct 2025
-<img src="pics/gr102025.gif" ALT="GRAPH 10 2025">
+<img src="pics/gr102025.gif" alt="GRAPH 10 2025">
 My Rainfall Nov 2025
-<img src="pics/gr112025.gif" ALT="GRAPH 11 2025">
+<img src="pics/gr112025.gif" alt="GRAPH 11 2025">
 My Rainfall Dec 2025
-<img src="pics/gr122025.gif" ALT="GRAPH 12 2025">
-<a href="rain2025.csv"><img src="pics/gr2025.gif" ALT="GRAPH 2025"></a>
-<img src="pics/gr2024.gif" ALT="GRAPH 2024">
-<img src="pics/gr2023.gif" ALT="GRAPH 2023">
-<img src="pics/gr2022.gif" ALT="GRAPH 2022">
-<img src="pics/gr2021.gif" ALT="GRAPH 2021">
-<img src="pics/gr2020.gif" ALT="GRAPH 2020">
-<img src="pics/gr2019.gif" ALT="GRAPH 2019">
-<img src="pics/gr2018.gif" ALT="GRAPH 2018">
-<img src="pics/gr2017.gif" ALT="GRAPH 2017">
-<img src="pics/gr2016.gif" ALT="GRAPH 2016">
-<img src="pics/gr2015.gif" ALT="GRAPH 2015">
-<img src="pics/gr2014.gif" ALT="GRAPH 2014">
-<img src="pics/gr2013.gif" ALT="GRAPH 2013">
-<img src="pics/gr2012.gif" ALT="GRAPH 2012">
-<img src="pics/gr2011.gif" ALT="GRAPH 2011">
-<img src="pics/gr2010.gif" ALT="GRAPH 2010">
-<img src="pics/gr2009.gif" ALT="GRAPH 2009">
-<img src="pics/gr2008.gif" ALT="GRAPH 2008">
-<img src="pics/gr2007.gif" ALT="GRAPH 2007">
-<img src="pics/gr2006.gif" ALT="GRAPH 2006">
-<img src="pics/gr2005.gif" ALT="GRAPH 2005">
+<img src="pics/gr122025.gif" alt="GRAPH 12 2025">
+<a href="rain2025.csv"><img src="pics/gr2025.gif" alt="GRAPH 2025"></a>
+<img src="pics/gr2024.gif" alt="GRAPH 2024">
+<img src="pics/gr2023.gif" alt="GRAPH 2023">
+<img src="pics/gr2022.gif" alt="GRAPH 2022">
+<img src="pics/gr2021.gif" alt="GRAPH 2021">
+<img src="pics/gr2020.gif" alt="GRAPH 2020">
+<img src="pics/gr2019.gif" alt="GRAPH 2019">
+<img src="pics/gr2018.gif" alt="GRAPH 2018">
+<img src="pics/gr2017.gif" alt="GRAPH 2017">
+<img src="pics/gr2016.gif" alt="GRAPH 2016">
+<img src="pics/gr2015.gif" alt="GRAPH 2015">
+<img src="pics/gr2014.gif" alt="GRAPH 2014">
+<img src="pics/gr2013.gif" alt="GRAPH 2013">
+<img src="pics/gr2012.gif" alt="GRAPH 2012">
+<img src="pics/gr2011.gif" alt="GRAPH 2011">
+<img src="pics/gr2010.gif" alt="GRAPH 2010">
+<img src="pics/gr2009.gif" alt="GRAPH 2009">
+<img src="pics/gr2008.gif" alt="GRAPH 2008">
+<img src="pics/gr2007.gif" alt="GRAPH 2007">
+<img src="pics/gr2006.gif" alt="GRAPH 2006">
+<img src="pics/gr2005.gif" alt="GRAPH 2005">
 </section>
 </main>
 
