--- a/myworks/myenvironment2025.html
+++ b/myworks/myenvironment2025.html
@@ -63,7 +63,8 @@ My Rainfall Dec 2025
 
 <footer>
 PLEASE NOTE, that the last month displayed here is often incomplete and does not show up to the minute results.
-<p><i>Web page Copyright &copy; Foley U. Matthews 2005-2025.
+<p><i>
+Web page Copyright &copy; Foley U. Matthews 2005-2025.
 </i></p>
 </footer>
 </body>
