--- a/myworks/myenvironment2015.html
+++ b/myworks/myenvironment2015.html
@@ -1,163 +1,49 @@
-<HTML>
-<HEAD>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
+<meta name="keywords" content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
+<meta name="author" content="Foley Matthews">
 <title>Foley Matthews Information - "My Rainfall."</title>
+<link rel="stylesheet" href="styles.css">
+</head>
 
-<meta name=description content="rainfall, environment, sustainability, ipswich, queensland, Foley Matthews, fumthings">
-<meta name=keywords content="rainfall, environment, sustainability, ipswich, queensland, Foley Matthews, fumthings">
+<body>
+<main>
+<section id="rainfall-graphs">
+<a href="rain012015.csv"><img src="pics/gr012015.gif" alt="GRAPH 01 2015"></a>
+<a href="rain022015.csv"><img src="pics/gr022015.gif" alt="GRAPH 02 2015"></a>
+<a href="rain032015.csv"><img src="pics/gr032015.gif" alt="GRAPH 03 2015"></a>
+<a href="rain042015.csv"><img src="pics/gr042015.gif" alt="GRAPH 04 2015"></a>
+<a href="rain052015.csv"><img src="pics/gr052015.gif" alt="GRAPH 05 2015"></a>
+<a href="rain062015.csv"><img src="pics/gr062015.gif" alt="GRAPH 06 2015"></a>
+<a href="rain072015.csv"><img src="pics/gr072015.gif" alt="GRAPH 07 2015"></a>
+<a href="rain082015.csv"><img src="pics/gr082015.gif" alt="GRAPH 08 2015"></a>
+<a href="rain092015.csv"><img src="pics/gr092015.gif" alt="GRAPH 09 2015"></a>
+<a href="rain102015.csv"><img src="pics/gr102015.gif" alt="GRAPH 10 2015"></a>
+<a href="rain112015.csv"><img src="pics/gr112015.gif" alt="GRAPH 11 2015"></a>
+<a href="rain122015.csv"><img src="pics/gr122015.gif" alt="GRAPH 12 2015"></a>
+<img src="pics/gr2015.gif" alt="GRAPH 2015">
+<img src="pics/gr2014.gif" alt="GRAPH 2014">
+<img src="pics/gr2013.gif" alt="GRAPH 2013">
+<img src="pics/gr2012.gif" alt="GRAPH 2012">
+<img src="pics/gr2011.gif" alt="GRAPH 2011">
+<img src="pics/gr2010.gif" alt="GRAPH 2010">
+<img src="pics/gr2009.gif" alt="GRAPH 2009">
+<img src="pics/gr2008.gif" alt="GRAPH 2008">
+<img src="pics/gr2007.gif" alt="GRAPH 2007">
+<img src="pics/gr2006.gif" alt="GRAPH 2006">
+<img src="pics/gr2005.gif" alt="GRAPH 2005">
+</section>
+</main>
 
-</HEAD>
-<BODY BGCOLOR=#E0E0FF>
-<center><h1>Foley Matthews Information,<BR>
-"My Rainfall."</h1>
-
-<h4>Here is original stuff by me.</h4></center>
-<p>
-
-You can contact me via this <a href="feedback2.html">link</a> if you are wise enough.
-
-<P>
-
-Rainfall data from the undisclosed Ipswich location <p>
-
-<b>Previous Years...</b> <a href="myenvironment2005.html">2005,</a>
-<a href="myenvironment2006.html">2006,</a> <a href="myenvironment2007.html">2007,</a> <a href="myenvironment2008.html">2008,</a>
-<a href="myenvironment2009.html">2009,</a> <a href="myenvironment2010.html">2010,</a> <a href="myenvironment2011.html">2011,</a>
-<a href="myenvironment2012.html">2012,</a> <a href="myenvironment2013.html">2013,</a> <a href="myenvironment2014.html">2014,</a>
-
-
-<P>
-
-<a href="rain012015.csv"><img src="pics/gr012015.gif" ALT="GRAPH 01 2015"></a>
-
-<P>
-
-<a href="rain022015.csv"><img src="pics/gr022015.gif" ALT="GRAPH 02 2015"></a>
-
-<P>
-
-<a href="rain032015.csv"><img src="pics/gr032015.gif" ALT="GRAPH 03 2015"></a>
-
-<P>
-
-<a href="rain042015.csv"><img src="pics/gr042015.gif" ALT="GRAPH 04 2015"></a>
-
-<P>
-
-<a href="rain052015.csv"><img src="pics/gr052015.gif" ALT="GRAPH 05 2015"></a>
-
-<P>
-
-<a href="rain062015.csv"><img src="pics/gr062015.gif" ALT="GRAPH 06 2015"></a>
-
-<P>
-
-<a href="rain072015.csv"><img src="pics/gr072015.gif" ALT="GRAPH 07 2015"></a>
-
-<P>
-
-<a href="rain082015.csv"><img src="pics/gr082015.gif" ALT="GRAPH 08 2015"></a>
-
-<P>
-
-<a href="rain092015.csv"><img src="pics/gr092015.gif" ALT="GRAPH 09 2015"></a>
-
-<P>
-
-<a href="rain102015.csv"><img src="pics/gr102015.gif" ALT="GRAPH 10 2015"></a>
-
-<P>
-
-<a href="rain112015.csv"><img src="pics/gr112015.gif" ALT="GRAPH 11 2015"></a>
-
-<P>
-
-<a href="rain122015.csv"><img src="pics/gr122015.gif" ALT="GRAPH 12 2015"></a>
-
-
-<P>
-
-<img src="pics/gr2015.gif" ALT="GRAPH 2015">
-
-<P>
-
-<img src="pics/gr2014.gif" ALT="GRAPH 2014">
-
-<P>
-
-<img src="pics/gr2013.gif" ALT="GRAPH 2013">
-
-<P>
-
-<img src="pics/gr2012.gif" ALT="GRAPH 2012">
-
-<P>
-
-<img src="pics/gr2011.gif" ALT="GRAPH 2011">
-
-<P>
-
-<img src="pics/gr2010.gif" ALT="GRAPH 2010">
-
-<P>
-
-<img src="pics/gr2009.gif" ALT="GRAPH 2009">
-
-<P>
-
-<img src="pics/gr2008.gif" ALT="GRAPH 2008">
-
-<P>
-
-<img src="pics/gr2007.gif" ALT="GRAPH 2007">
-
-<P>
-
-<img src="pics/gr2006.gif" ALT="GRAPH 2006">
-
-<P>
-
-<img src="pics/gr2005.gif" ALT="GRAPH 2005">
-
-<P>
-
+<footer>
 PLEASE NOTE, that the last month displayed here is often incomplete and does not show up to the minute results.
-
-<P>
-
-<i>Web page Copyright &copy Foley U. Matthews 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015.
-</i>
-<p>
-
-</BODY>
-</HTML>	
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<p><i>
+Web page Copyright &copy; Foley U. Matthews 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015.
+</i></p>
+</footer>
+</body>
+</html>	
