--- a/myworks/myenvironment2005.html
+++ b/myworks/myenvironment2005.html
@@ -1,90 +1,33 @@
-<HTML>
-<HEAD>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
+<meta name="keywords" content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
+<meta name="author" content="Foley Matthews">
 <title>Foley Matthews Information - "My Rainfall."</title>
+<link rel="stylesheet" href="styles.css">
+</head>
 
-<meta name=description content="rainfall, environment, sustainability, ipswich, queensland, Foley Matthews, fumthings">
-<meta name=keywords content="rainfall, environment, sustainability, ipswich, queensland, Foley Matthews, fumthings">
+<body>
+<main>
+<section id="rainfall-graphs">
+<a href="rain082005.csv"><img src="pics/gr082005.gif" alt="GRAPH 08 2005"></a>
+<a href="rain092005.csv"><img src="pics/gr092005.gif" alt="GRAPH 09 2005"></a>
+<a href="rain102005.csv"><img src="pics/gr102005.gif" alt="GRAPH 10 2005"></a>
+<a href="rain112005.csv"><img src="pics/gr112005.gif" alt="GRAPH 11 2005"></a>
+<a href="rain122005.csv"><img src="pics/gr122005.gif" alt="GRAPH 12 2005"></a>
+<img src="pics/gr2005.gif" alt="GRAPH 2005">
+</section>
+</main>
 
-</HEAD>
-<BODY BGCOLOR=#E0E0FF>
-<center><h1>Foley Matthews Information,<BR>
-"My Rainfall."</h1>
-
-<h4>Here is original stuff by me.</h4></center>
-<p>
-
-You can contact me via this <a href="feedback2.html">link</a> if you are wise enough.
-
-<P>
-
-Rainfall data from the undisclosed Ipswich location <p>
-
-<b>Previous Years...</b>
-
-<P>
-
-<a href="rain082005.csv"><img src="pics/gr082005.gif" ALT="GRAPH 08 2005"></a>
-
-<P>
-
-<a href="rain092005.csv"><img src="pics/gr092005.gif" ALT="GRAPH 09 2005"></a>
-
-<P>
-
-<a href="rain102005.csv"><img src="pics/gr102005.gif" ALT="GRAPH 10 2005"></a>
-
-<P>
-
-<a href="rain112005.csv"><img src="pics/gr112005.gif" ALT="GRAPH 11 2005"></a>
-
-<P>
-
-<a href="rain122005.csv"><img src="pics/gr122005.gif" ALT="GRAPH 12 2005"></a>
-
-<P>
-
-<img src="pics/gr2005.gif" ALT="GRAPH 2005">
-
-<P>
-
+<footer>
 PLEASE NOTE, that the last month displayed here is often incomplete and does not show up to the minute results.
-
-<P>
-
-<i>Web page Copyright &copy Foley U. Matthews 2005.
-</i>
-<p>
-
-</BODY>
-</HTML>	
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<p><i>
+Web page Copyright &copy; Foley U. Matthews 2005.
+</i></p>
+</footer>
+</body>
+</html>	
 
