--- a/myworks/myenvironment2006.html
+++ b/myworks/myenvironment2006.html
@@ -1,122 +1,42 @@
-<HTML>
-<HEAD>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
+<meta name="keywords" content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
+<meta name="author" content="Foley Matthews">
 <title>Foley Matthews Information - "My Rainfall."</title>
+<link rel="stylesheet" href="styles.css">
+</head>
 
-<meta name=description content="rainfall, environment, sustainability, ipswich, queensland, Foley Matthews, fumthings">
-<meta name=keywords content="rainfall, environment, sustainability, ipswich, queensland, Foley Matthews, fumthings">
+<body>
+<main>
+<section id="rainfall-graphs">
+<a href="rain012006.csv"><img src="pics/gr012006.gif" alt="GRAPH 01 2006"></a>
+<a href="rain022006.csv"><img src="pics/gr022006.gif" alt="GRAPH 02 2006"></a>
+<a href="rain032006.csv"><img src="pics/gr032006.gif" alt="GRAPH 03 2006"></a>
+<a href="rain042006.csv"><img src="pics/gr042006.gif" alt="GRAPH 04 2006"></a>
+<a href="rain052006.csv"><img src="pics/gr052006.gif" alt="GRAPH 05 2006"></a>
+<a href="rain062006.csv"><img src="pics/gr062006.gif" alt="GRAPH 06 2006"></a>
+<a href="rain072006.csv"><img src="pics/gr072006.gif" alt="GRAPH 07 2006"></a>
+<a href="rain082006.csv"><img src="pics/gr082006.gif" alt="GRAPH 08 2006"></a>
+<a href="rain092006.csv"><img src="pics/gr092006.gif" alt="GRAPH 09 2006"></a>
+<a href="rain102006.csv"><img src="pics/gr102006.gif" alt="GRAPH 10 2006"></a>
+<a href="rain112006.csv"><img src="pics/gr112006.gif" alt="GRAPH 11 2006"></a>
+<a href="rain122006.csv"><img src="pics/gr122006.gif" alt="GRAPH 12 2006"></a>
+<img src="pics/gr2006.gif" alt="GRAPH 2006">
+<img src="pics/gr2005.gif" alt="GRAPH 2005">
+</section>
+</main>
 
-</HEAD>
-<BODY BGCOLOR=#E0E0FF>
-<center><h1>Foley Matthews Information,<BR>
-"My Rainfall."</h1>
-
-<h4>Here is original stuff by me.</h4></center>
-<p>
-
-You can contact me via this <a href="feedback2.html">link</a> if you are wise enough.
-
-<P>
-
-Rainfall data from the undisclosed Ipswich location <p>
-
-<b>Previous Years...</b> <a href="myenvironment2005.html">2005,</a>
-
-<P>
-
-<a href="rain012006.csv"><img src="pics/gr012006.gif" ALT="GRAPH 01 2006"></a>
-
-<P>
-
-<a href="rain022006.csv"><img src="pics/gr022006.gif" ALT="GRAPH 02 2006"></a>
-
-<P>
-
-<a href="rain032006.csv"><img src="pics/gr032006.gif" ALT="GRAPH 03 2006"></a>
-
-<P>
-
-<a href="rain042006.csv"><img src="pics/gr042006.gif" ALT="GRAPH 04 2006"></a>
-
-<P>
-
-<a href="rain052006.csv"><img src="pics/gr052006.gif" ALT="GRAPH 05 2006"></a>
-
-<P>
-
-<a href="rain062006.csv"><img src="pics/gr062006.gif" ALT="GRAPH 06 2006"></a>
-
-<P>
-
-<a href="rain072006.csv"><img src="pics/gr072006.gif" ALT="GRAPH 07 2006"></a>
-
-<P>
-
-<a href="rain082006.csv"><img src="pics/gr082006.gif" ALT="GRAPH 08 2006"></a>
-
-<P>
-
-<a href="rain092006.csv"><img src="pics/gr092006.gif" ALT="GRAPH 09 2006"></a>
-
-<P>
-
-<a href="rain102006.csv"><img src="pics/gr102006.gif" ALT="GRAPH 10 2006"></a>
-
-<P>
-
-<a href="rain112006.csv"><img src="pics/gr112006.gif" ALT="GRAPH 11 2006"></a>
-
-<P>
-
-<a href="rain122006.csv"><img src="pics/gr122006.gif" ALT="GRAPH 12 2006"></a>
-
-<P>
-
-<img src="pics/gr2006.gif" ALT="GRAPH 2006">
-
-<P>
-
-<img src="pics/gr2005.gif" ALT="GRAPH 2005">
-
-<P>
-
+<footer>
 PLEASE NOTE, that the last month displayed here is often incomplete and does not show up to the minute results.
-
-<P>
-
-<i>Web page Copyright &copy Foley U. Matthews 2005, 2006.
-</i>
-<p>
-
-</BODY>
-</HTML>	
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<p><i>
+Web page Copyright &copy; Foley U. Matthews 2005, 2006.
+</i></p>
+</footer>
+</body>
+</html>	
 
 
