--- a/myworks/myenvironment2007.html
+++ b/myworks/myenvironment2007.html
@@ -1,127 +1,43 @@
-<HTML>
-<HEAD>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
+<meta name="keywords" content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
+<meta name="author" content="Foley Matthews">
 <title>Foley Matthews Information - "My Rainfall."</title>
+<link rel="stylesheet" href="styles.css">
+</head>
 
-<meta name=description content="rainfall, environment, sustainability, ipswich, queensland, Foley Matthews, fumthings">
-<meta name=keywords content="rainfall, environment, sustainability, ipswich, queensland, Foley Matthews, fumthings">
+<body>
+<main>
+<section id="rainfall-graphs">
+<a href="rain012007.csv"><img src="pics/gr012007.gif" alt="GRAPH 01 2007"></a>
+<a href="rain022007.csv"><img src="pics/gr022007.gif" alt="GRAPH 02 2007"></a>
+<a href="rain032007.csv"><img src="pics/gr032007.gif" alt="GRAPH 03 2007"></a>
+<a href="rain042007.csv"><img src="pics/gr042007.gif" alt="GRAPH 04 2007"></a>
+<a href="rain052007.csv"><img src="pics/gr052007.gif" alt="GRAPH 05 2007"></a>
+<a href="rain062007.csv"><img src="pics/gr062007.gif" alt="GRAPH 06 2007"></a>
+<a href="rain072007.csv"><img src="pics/gr072007.gif" alt="GRAPH 07 2007"></a>
+<a href="rain082007.csv"><img src="pics/gr082007.gif" alt="GRAPH 08 2007"></a>
+<a href="rain092007.csv"><img src="pics/gr092007.gif" alt="GRAPH 09 2007"></a>
+<a href="rain102007.csv"><img src="pics/gr102007.gif" alt="GRAPH 10 2007"></a>
+<a href="rain112007.csv"><img src="pics/gr112007.gif" alt="GRAPH 11 2007"></a>
+<a href="rain122007.csv"><img src="pics/gr122007.gif" alt="GRAPH 12 2007"></a>
+<img src="pics/gr2007.gif" alt="GRAPH 2007">
+<img src="pics/gr2006.gif" alt="GRAPH 2006">
+<img src="pics/gr2005.gif" alt="GRAPH 2005">
+</section>
+</main>
 
-</HEAD>
-<BODY BGCOLOR=#E0E0FF>
-<center><h1>Foley Matthews Information,<BR>
-"My Rainfall."</h1>
-
-<h4>Here is original stuff by me.</h4></center>
-<p>
-
-You can contact me via this <a href="feedback2.html">link</a> if you are wise enough.
-
-<P>
-
-Rainfall data from the undisclosed Ipswich location <p>
-
-<b>Previous Years...</b> <a href="myenvironment2005.html">2005,</a>
-<a href="myenvironment2006.html">2006,</a>
-
-<P>
-
-<a href="rain012007.csv"><img src="pics/gr012007.gif" ALT="GRAPH 01 2007"></a>
-
-<P>
-
-<a href="rain022007.csv"><img src="pics/gr022007.gif" ALT="GRAPH 02 2007"></a>
-
-<P>
-
-<a href="rain032007.csv"><img src="pics/gr032007.gif" ALT="GRAPH 03 2007"></a>
-
-<P>
-
-<a href="rain042007.csv"><img src="pics/gr042007.gif" ALT="GRAPH 04 2007"></a>
-
-<P>
-
-<a href="rain052007.csv"><img src="pics/gr052007.gif" ALT="GRAPH 05 2007"></a>
-
-<P>
-
-<a href="rain062007.csv"><img src="pics/gr062007.gif" ALT="GRAPH 06 2007"></a>
-
-<P>
-
-<a href="rain072007.csv"><img src="pics/gr072007.gif" ALT="GRAPH 07 2007"></a>
-
-<P>
-
-<a href="rain082007.csv"><img src="pics/gr082007.gif" ALT="GRAPH 08 2007"></a>
-
-<P>
-
-<a href="rain092007.csv"><img src="pics/gr092007.gif" ALT="GRAPH 09 2007"></a>
-
-<P>
-
-<a href="rain102007.csv"><img src="pics/gr102007.gif" ALT="GRAPH 10 2007"></a>
-
-<P>
-
-<a href="rain112007.csv"><img src="pics/gr112007.gif" ALT="GRAPH 11 2007"></a>
-
-<P>
-
-<a href="rain122007.csv"><img src="pics/gr122007.gif" ALT="GRAPH 12 2007"></a>
-
-<P>
-
-<img src="pics/gr2007.gif" ALT="GRAPH 2007">
-
-<P>
-
-<img src="pics/gr2006.gif" ALT="GRAPH 2006">
-
-<P>
-
-<img src="pics/gr2005.gif" ALT="GRAPH 2005">
-
-<P>
-
+<footer>
 PLEASE NOTE, that the last month displayed here is often incomplete and does not show up to the minute results.
-
-<P>
-
-<i>Web page Copyright &copy Foley U. Matthews 2005, 2006, 2007.
-</i>
-<p>
-
-</BODY>
-</HTML>	
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<p><i>
+Web page Copyright &copy; Foley U. Matthews 2005, 2006, 2007.
+</i></p>
+</footer>
+</body>
+</html>	
 
 
