--- a/myworks/myenvironment2008.html
+++ b/myworks/myenvironment2008.html
@@ -1,131 +1,43 @@
-<HTML>
-<HEAD>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
+<meta name="keywords" content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
+<meta name="author" content="Foley Matthews">
 <title>Foley Matthews Information - "My Rainfall."</title>
+<link rel="stylesheet" href="styles.css">
+</head>
 
-<meta name=description content="rainfall, environment, sustainability, ipswich, queensland, Foley Matthews, fumthings">
-<meta name=keywords content="rainfall, environment, sustainability, ipswich, queensland, Foley Matthews, fumthings">
+<body>
+<main>
+<section id="rainfall-graphs">
+<a href="rain012008.csv"><img src="pics/gr012008.gif" alt="GRAPH 01 2008"></a>
+<a href="rain022008.csv"><img src="pics/gr022008.gif" alt="GRAPH 02 2008"></a>
+<a href="rain032008.csv"><img src="pics/gr032008.gif" alt="GRAPH 03 2008"></a>
+<a href="rain042008.csv"><img src="pics/gr042008.gif" alt="GRAPH 04 2008"></a>
+<a href="rain052008.csv"><img src="pics/gr052008.gif" alt="GRAPH 05 2008"></a>
+<a href="rain062008.csv"><img src="pics/gr062008.gif" alt="GRAPH 06 2008"></a>
+<a href="rain072008.csv"><img src="pics/gr072008.gif" alt="GRAPH 07 2008"></a>
+<a href="rain082008.csv"><img src="pics/gr082008.gif" alt="GRAPH 08 2008"></a>
+<a href="rain092008.csv"><img src="pics/gr092008.gif" alt="GRAPH 09 2008"></a>
+<a href="rain102008.csv"><img src="pics/gr102008.gif" alt="GRAPH 10 2008"></a>
+<a href="rain112008.csv"><img src="pics/gr112008.gif" alt="GRAPH 11 2008"></a>
+<a href="rain122008.csv"><img src="pics/gr122008.gif" alt="GRAPH 12 2008"></a>
+<img src="pics/gr2008.gif" alt="GRAPH 2008">
+<img src="pics/gr2007.gif" alt="GRAPH 2007">
+<img src="pics/gr2006.gif" alt="GRAPH 2006">
+<img src="pics/gr2005.gif" alt="GRAPH 2005">
+</section>
+</main>
 
-</HEAD>
-<BODY BGCOLOR=#E0E0FF>
-<center><h1>Foley Matthews Information,<BR>
-"My Rainfall."</h1>
-
-<h4>Here is original stuff by me.</h4></center>
-<p>
-
-You can contact me via this <a href="feedback2.html">link</a> if you are wise enough.
-
-<P>
-
-Rainfall data from the undisclosed Ipswich location <p>
-
-<b>Previous Years...</b> <a href="myenvironment2005.html">2005,</a>
-<a href="myenvironment2006.html">2006,</a> <a href="myenvironment2007.html">2007,</a>
-
-<P>
-
-<a href="rain012008.csv"><img src="pics/gr012008.gif" ALT="GRAPH 01 2008"></a>
-
-<P>
-
-<a href="rain022008.csv"><img src="pics/gr022008.gif" ALT="GRAPH 02 2008"></a>
-
-<P>
-
-<a href="rain032008.csv"><img src="pics/gr032008.gif" ALT="GRAPH 03 2008"></a>
-
-<P>
-
-<a href="rain042008.csv"><img src="pics/gr042008.gif" ALT="GRAPH 04 2008"></a>
-
-<P>
-
-<a href="rain052008.csv"><img src="pics/gr052008.gif" ALT="GRAPH 05 2008"></a>
-
-<P>
-
-<a href="rain062008.csv"><img src="pics/gr062008.gif" ALT="GRAPH 06 2008"></a>
-
-<P>
-
-<a href="rain072008.csv"><img src="pics/gr072008.gif" ALT="GRAPH 07 2008"></a>
-
-<P>
-
-<a href="rain082008.csv"><img src="pics/gr082008.gif" ALT="GRAPH 08 2008"></a>
-
-<P>
-
-<a href="rain092008.csv"><img src="pics/gr092008.gif" ALT="GRAPH 09 2008"></a>
-
-<P>
-
-<a href="rain102008.csv"><img src="pics/gr102008.gif" ALT="GRAPH 10 2008"></a>
-
-<P>
-
-<a href="rain112008.csv"><img src="pics/gr112008.gif" ALT="GRAPH 11 2008"></a>
-
-<P>
-
-<a href="rain122008.csv"><img src="pics/gr122008.gif" ALT="GRAPH 12 2008"></a>
-
-<P>
-
-<img src="pics/gr2008.gif" ALT="GRAPH 2008">
-
-<P>
-
-<img src="pics/gr2007.gif" ALT="GRAPH 2007">
-
-<P>
-
-<img src="pics/gr2006.gif" ALT="GRAPH 2006">
-
-<P>
-
-<img src="pics/gr2005.gif" ALT="GRAPH 2005">
-
-<P>
-
+<footer>
 PLEASE NOTE, that the last month displayed here is often incomplete and does not show up to the minute results.
-
-<P>
-
-<i>Web page Copyright &copy Foley U. Matthews 2005, 2006, 2007, 2008.
-</i>
-<p>
-
-</BODY>
-</HTML>	
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<p><i>
+Web page Copyright &copy; Foley U. Matthews 2005, 2006, 2007, 2008.
+</i></p>
+</footer>
+</body>
+</html>	
 
