--- a/myworks/myenvironment2009.html
+++ b/myworks/myenvironment2009.html
@@ -1,135 +1,44 @@
-<HTML>
-<HEAD>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
+<meta name="keywords" content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
+<meta name="author" content="Foley Matthews">
 <title>Foley Matthews Information - "My Rainfall."</title>
+<link rel="stylesheet" href="styles.css">
+</head>
 
-<meta name=description content="rainfall, environment, sustainability, ipswich, queensland, Foley Matthews, fumthings">
-<meta name=keywords content="rainfall, environment, sustainability, ipswich, queensland, Foley Matthews, fumthings">
+<body>
+<main>
+<section id="rainfall-graphs">
+<a href="rain012009.csv"><img src="pics/gr012009.gif" alt="GRAPH 01 2009"></a>
+<a href="rain022009.csv"><img src="pics/gr022009.gif" alt="GRAPH 02 2009"></a>
+<a href="rain032009.csv"><img src="pics/gr032009.gif" alt="GRAPH 03 2009"></a>
+<a href="rain042009.csv"><img src="pics/gr042009.gif" alt="GRAPH 04 2009"></a>
+<a href="rain052009.csv"><img src="pics/gr052009.gif" alt="GRAPH 05 2009"></a>
+<a href="rain062009.csv"><img src="pics/gr062009.gif" alt="GRAPH 06 2009"></a>
+<a href="rain072009.csv"><img src="pics/gr072009.gif" alt="GRAPH 07 2009"></a>
+<a href="rain082009.csv"><img src="pics/gr082009.gif" alt="GRAPH 08 2009"></a>
+<a href="rain092009.csv"><img src="pics/gr092009.gif" alt="GRAPH 09 2009"></a>
+<a href="rain102009.csv"><img src="pics/gr102009.gif" alt="GRAPH 10 2009"></a>
+<a href="rain112009.csv"><img src="pics/gr112009.gif" alt="GRAPH 11 2009"></a>
+<a href="rain122009.csv"><img src="pics/gr122009.gif" alt="GRAPH 12 2009"></a>
+<img src="pics/gr2009.gif" alt="GRAPH 2009">
+<img src="pics/gr2008.gif" alt="GRAPH 2008">
+<img src="pics/gr2007.gif" alt="GRAPH 2007">
+<img src="pics/gr2006.gif" alt="GRAPH 2006">
+<img src="pics/gr2005.gif" alt="GRAPH 2005">
+</section>
+</main>
 
-</HEAD>
-<BODY BGCOLOR=#E0E0FF>
-<center><h1>Foley Matthews Information,<BR>
-"My Rainfall."</h1>
-
-<h4>Here is original stuff by me.</h4></center>
-<p>
-
-You can contact me via this <a href="feedback2.html">link</a> if you are wise enough.
-
-<P>
-
-Rainfall data from the undisclosed Ipswich location <p>
-
-<b>Previous Years...</b> <a href="myenvironment2005.html">2005,</a>
-<a href="myenvironment2006.html">2006,</a> <a href="myenvironment2007.html">2007,</a> <a href="myenvironment2008.html">2008,</a>
-
-<P>
-
-<a href="rain012009.csv"><img src="pics/gr012009.gif" ALT="GRAPH 01 2009"></a>
-
-<P>
-
-<a href="rain022009.csv"><img src="pics/gr022009.gif" ALT="GRAPH 02 2009"></a>
-
-<P>
-
-<a href="rain032009.csv"><img src="pics/gr032009.gif" ALT="GRAPH 03 2009"></a>
-
-<P>
-
-<a href="rain042009.csv"><img src="pics/gr042009.gif" ALT="GRAPH 04 2009"></a>
-
-<P>
-
-<a href="rain052009.csv"><img src="pics/gr052009.gif" ALT="GRAPH 05 2009"></a>
-
-<P>
-
-<a href="rain062009.csv"><img src="pics/gr062009.gif" ALT="GRAPH 06 2009"></a>
-
-<P>
-
-<a href="rain072009.csv"><img src="pics/gr072009.gif" ALT="GRAPH 07 2009"></a>
-
-<P>
-
-<a href="rain082009.csv"><img src="pics/gr082009.gif" ALT="GRAPH 08 2009"></a>
-
-<P>
-
-<a href="rain092009.csv"><img src="pics/gr092009.gif" ALT="GRAPH 09 2009"></a>
-
-<P>
-
-<a href="rain102009.csv"><img src="pics/gr102009.gif" ALT="GRAPH 10 2009"></a>
-
-<P>
-
-<a href="rain112009.csv"><img src="pics/gr112009.gif" ALT="GRAPH 11 2009"></a>
-
-<P>
-
-<a href="rain122009.csv"><img src="pics/gr122009.gif" ALT="GRAPH 12 2009"></a>
-
-<P>
-
-<img src="pics/gr2009.gif" ALT="GRAPH 2009">
-
-<P>
-
-<img src="pics/gr2008.gif" ALT="GRAPH 2008">
-
-<P>
-
-<img src="pics/gr2007.gif" ALT="GRAPH 2007">
-
-<P>
-
-<img src="pics/gr2006.gif" ALT="GRAPH 2006">
-
-<P>
-
-<img src="pics/gr2005.gif" ALT="GRAPH 2005">
-
-<P>
-
+<footer>
 PLEASE NOTE, that the last month displayed here is often incomplete and does not show up to the minute results.
-
-<P>
-
-<i>Web page Copyright &copy Foley U. Matthews 2005, 2006, 2007, 2008, 2009.
-</i>
-<p>
-
-</BODY>
-</HTML>	
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<p><i>
+Web page Copyright &copy; Foley U. Matthews 2005, 2006, 2007, 2008, 2009.
+</i></p>
+</footer>
+</body>
+</html>	
 
