--- a/myworks/myenvironment2010.html
+++ b/myworks/myenvironment2010.html
@@ -1,140 +1,45 @@
-<HTML>
-<HEAD>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
+<meta name="keywords" content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
+<meta name="author" content="Foley Matthews">
 <title>Foley Matthews Information - "My Rainfall."</title>
+<link rel="stylesheet" href="styles.css">
+</head>
 
-<meta name=description content="rainfall, environment, sustainability, ipswich, queensland, Foley Matthews, fumthings">
-<meta name=keywords content="rainfall, environment, sustainability, ipswich, queensland, Foley Matthews, fumthings">
+<body>
+<main>
+<section id="rainfall-graphs">
+<a href="rain012010.csv"><img src="pics/gr012010.gif" alt="GRAPH 01 2010"></a>
+<a href="rain022010.csv"><img src="pics/gr022010.gif" alt="GRAPH 02 2010"></a>
+<a href="rain032010.csv"><img src="pics/gr032010.gif" alt="GRAPH 03 2010"></a>
+<a href="rain042010.csv"><img src="pics/gr042010.gif" alt="GRAPH 04 2010"></a>
+<a href="rain052010.csv"><img src="pics/gr052010.gif" alt="GRAPH 05 2010"></a>
+<a href="rain062010.csv"><img src="pics/gr062010.gif" alt="GRAPH 06 2010"></a>
+<a href="rain072010.csv"><img src="pics/gr072010.gif" alt="GRAPH 07 2010"></a>
+<a href="rain082010.csv"><img src="pics/gr082010.gif" alt="GRAPH 08 2010"></a>
+<a href="rain092010.csv"><img src="pics/gr092010.gif" alt="GRAPH 09 2010"></a>
+<a href="rain102010.csv"><img src="pics/gr102010.gif" alt="GRAPH 10 2010"></a>
+<a href="rain112010.csv"><img src="pics/gr112010.gif" alt="GRAPH 11 2010"></a>
+<a href="rain122010.csv"><img src="pics/gr122010.gif" alt="GRAPH 12 2010"></a>
+<img src="pics/gr2010.gif" alt="GRAPH 2010">
+<img src="pics/gr2009.gif" alt="GRAPH 2009">
+<img src="pics/gr2008.gif" alt="GRAPH 2008">
+<img src="pics/gr2007.gif" alt="GRAPH 2007">
+<img src="pics/gr2006.gif" alt="GRAPH 2006">
+<img src="pics/gr2005.gif" alt="GRAPH 2005">
+</section>
+</main>
 
-</HEAD>
-<BODY BGCOLOR=#E0E0FF>
-<center><h1>Foley Matthews Information,<BR>
-"My Rainfall."</h1>
-
-<h4>Here is original stuff by me.</h4></center>
-<p>
-
-You can contact me via this <a href="feedback2.html">link</a> if you are wise enough.
-
-<P>
-
-Rainfall data from the undisclosed Ipswich location <p>
-
-<b>Previous Years...</b> <a href="myenvironment2005.html">2005,</a>
-<a href="myenvironment2006.html">2006,</a> <a href="myenvironment2007.html">2007,</a> <a href="myenvironment2008.html">2008,</a>
-<a href="myenvironment2009.html">2009,</a>
-
-<P>
-
-<a href="rain012010.csv"><img src="pics/gr012010.gif" ALT="GRAPH 01 2010"></a>
-
-<P>
-
-<a href="rain022010.csv"><img src="pics/gr022010.gif" ALT="GRAPH 02 2010"></a>
-
-<P>
-
-<a href="rain032010.csv"><img src="pics/gr032010.gif" ALT="GRAPH 03 2010"></a>
-
-<P>
-
-<a href="rain042010.csv"><img src="pics/gr042010.gif" ALT="GRAPH 04 2010"></a>
-
-<P>
-
-<a href="rain052010.csv"><img src="pics/gr052010.gif" ALT="GRAPH 05 2010"></a>
-
-<P>
-
-<a href="rain062010.csv"><img src="pics/gr062010.gif" ALT="GRAPH 06 2010"></a>
-
-<P>
-
-<a href="rain072010.csv"><img src="pics/gr072010.gif" ALT="GRAPH 07 2010"></a>
-
-<P>
-
-<a href="rain082010.csv"><img src="pics/gr082010.gif" ALT="GRAPH 08 2010"></a>
-
-<P>
-
-<a href="rain092010.csv"><img src="pics/gr092010.gif" ALT="GRAPH 09 2010"></a>
-
-<P>
-
-<a href="rain102010.csv"><img src="pics/gr102010.gif" ALT="GRAPH 10 2010"></a>
-
-<P>
-
-<a href="rain112010.csv"><img src="pics/gr112010.gif" ALT="GRAPH 11 2010"></a>
-
-<P>
-
-<a href="rain122010.csv"><img src="pics/gr122010.gif" ALT="GRAPH 12 2010"></a>
-
-<P>
-
-<img src="pics/gr2010.gif" ALT="GRAPH 2010">
-
-<P>
-
-<img src="pics/gr2009.gif" ALT="GRAPH 2009">
-
-<P>
-
-<img src="pics/gr2008.gif" ALT="GRAPH 2008">
-
-<P>
-
-<img src="pics/gr2007.gif" ALT="GRAPH 2007">
-
-<P>
-
-<img src="pics/gr2006.gif" ALT="GRAPH 2006">
-
-<P>
-
-<img src="pics/gr2005.gif" ALT="GRAPH 2005">
-
-<P>
-
+<footer>
 PLEASE NOTE, that the last month displayed here is often incomplete and does not show up to the minute results.
-
-<P>
-
-<i>Web page Copyright &copy Foley U. Matthews 2005, 2006, 2007, 2008, 2009, 2010.
-</i>
-<p>
-
-</BODY>
-</HTML>	
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<p><i>
+Web page Copyright &copy; Foley U. Matthews 2005, 2006, 2007, 2008, 2009, 2010.
+</i></p>
+</footer>
+</body>
+</html>	
 
