--- a/myworks/myenvironment2013.html
+++ b/myworks/myenvironment2013.html
@@ -1,153 +1,47 @@
-<HTML>
-<HEAD>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
+<meta name="keywords" content="rainfall, environment, sustainability, ipswich, queensland, australia, Foley Matthews, fumthings">
+<meta name="author" content="Foley Matthews">
 <title>Foley Matthews Information - "My Rainfall."</title>
+<link rel="stylesheet" href="styles.css">
+</head>
 
-<meta name=description content="rainfall, environment, sustainability, ipswich, queensland, Foley Matthews, fumthings">
-<meta name=keywords content="rainfall, environment, sustainability, ipswich, queensland, Foley Matthews, fumthings">
+<body>
+<main>
+<section id="rainfall-graphs">
+<a href="rain012013.csv"><img src="pics/gr012013.gif" alt="GRAPH 01 2013"></a>
+<a href="rain022013.csv"><img src="pics/gr022013.gif" alt="GRAPH 02 2013"></a>
+<a href="rain032013.csv"><img src="pics/gr032013.gif" alt="GRAPH 03 2013"></a>
+<a href="rain042013.csv"><img src="pics/gr042013.gif" alt="GRAPH 04 2013"></a>
+<a href="rain052013.csv"><img src="pics/gr052013.gif" alt="GRAPH 05 2013"></a>
+<a href="rain062013.csv"><img src="pics/gr062013.gif" alt="GRAPH 06 2013"></a>
+<a href="rain072013.csv"><img src="pics/gr072013.gif" alt="GRAPH 07 2013"></a>
+<a href="rain082013.csv"><img src="pics/gr082013.gif" alt="GRAPH 08 2013"></a>
+<a href="rain092013.csv"><img src="pics/gr092013.gif" alt="GRAPH 09 2013"></a>
+<a href="rain102013.csv"><img src="pics/gr102013.gif" alt="GRAPH 10 2013"></a>
+<a href="rain112013.csv"><img src="pics/gr112013.gif" alt="GRAPH 11 2013"></a>
+<a href="rain122013.csv"><img src="pics/gr122013.gif" alt="GRAPH 12 2013"></a>
+<img src="pics/gr2013.gif" alt="GRAPH 2013">
+<img src="pics/gr2012.gif" alt="GRAPH 2012">
+<img src="pics/gr2011.gif" alt="GRAPH 2011">
+<img src="pics/gr2010.gif" alt="GRAPH 2010">
+<img src="pics/gr2009.gif" alt="GRAPH 2009">
+<img src="pics/gr2008.gif" alt="GRAPH 2008">
+<img src="pics/gr2007.gif" alt="GRAPH 2007">
+<img src="pics/gr2006.gif" alt="GRAPH 2006">
+<img src="pics/gr2005.gif" alt="GRAPH 2005">
+</section>
+</main>
 
-</HEAD>
-<BODY BGCOLOR=#E0E0FF>
-<center><h1>Foley Matthews Information,<BR>
-"My Rainfall."</h1>
-
-<h4>Here is original stuff by me.</h4></center>
-<p>
-
-You can contact me via this <a href="feedback2.html">link</a> if you are wise enough.
-
-<P>
-
-Rainfall data from the undisclosed Ipswich location <p>
-
-<b>Previous Years...</b> <a href="myenvironment2005.html">2005,</a>
-<a href="myenvironment2006.html">2006,</a> <a href="myenvironment2007.html">2007,</a> <a href="myenvironment2008.html">2008,</a>
-<a href="myenvironment2009.html">2009,</a> <a href="myenvironment2010.html">2010,</a> <a href="myenvironment2011.html">2011,</a>
-<a href="myenvironment2012.html">2012,</a>
-
-<P>
-
-<a href="rain012013.csv"><img src="pics/gr012013.gif" ALT="GRAPH 01 2013"></a>
-
-<P>
-
-<a href="rain022013.csv"><img src="pics/gr022013.gif" ALT="GRAPH 02 2013"></a>
-
-<P>
-
-<a href="rain032013.csv"><img src="pics/gr032013.gif" ALT="GRAPH 03 2013"></a>
-
-<P>
-
-<a href="rain042013.csv"><img src="pics/gr042013.gif" ALT="GRAPH 04 2013"></a>
-
-<P>
-
-<a href="rain052013.csv"><img src="pics/gr052013.gif" ALT="GRAPH 05 2013"></a>
-
-<P>
-
-<a href="rain062013.csv"><img src="pics/gr062013.gif" ALT="GRAPH 06 2013"></a>
-
-<P>
-
-<a href="rain072013.csv"><img src="pics/gr072013.gif" ALT="GRAPH 07 2013"></a>
-
-<P>
-
-<a href="rain082013.csv"><img src="pics/gr082013.gif" ALT="GRAPH 08 2013"></a>
-
-<P>
-
-<a href="rain092013.csv"><img src="pics/gr092013.gif" ALT="GRAPH 09 2013"></a>
-
-<P>
-
-<a href="rain102013.csv"><img src="pics/gr102013.gif" ALT="GRAPH 10 2013"></a>
-
-<P>
-
-<a href="rain112013.csv"><img src="pics/gr112013.gif" ALT="GRAPH 11 2013"></a>
-
-<P>
-
-<a href="rain122013.csv"><img src="pics/gr122013.gif" ALT="GRAPH 12 2013"></a>
-
-<P>
-
-<img src="pics/gr2013.gif" ALT="GRAPH 2013">
-
-<P>
-
-<img src="pics/gr2012.gif" ALT="GRAPH 2012">
-
-<P>
-
-<img src="pics/gr2011.gif" ALT="GRAPH 2011">
-
-<P>
-
-<img src="pics/gr2010.gif" ALT="GRAPH 2010">
-
-<P>
-
-<img src="pics/gr2009.gif" ALT="GRAPH 2009">
-
-<P>
-
-<img src="pics/gr2008.gif" ALT="GRAPH 2008">
-
-<P>
-
-<img src="pics/gr2007.gif" ALT="GRAPH 2007">
-
-<P>
-
-<img src="pics/gr2006.gif" ALT="GRAPH 2006">
-
-<P>
-
-<img src="pics/gr2005.gif" ALT="GRAPH 2005">
-
-<P>
-
+<footer>
 PLEASE NOTE, that the last month displayed here is often incomplete and does not show up to the minute results.
-
-<P>
-
-<i>Web page Copyright &copy Foley U. Matthews 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013.
-</i>
-<p>
-
-</BODY>
-</HTML>	
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<p><i>
+Web page Copyright &copy; Foley U. Matthews 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013.
+</i></p>
+</footer>
+</body>
+</html>	
