--- a/testing.html
+++ b/testing.html
@@ -14,6 +14,7 @@
         }
         h1 {
             color: #333;
+	    font-size: 16px;  /* Heading 1 will have a font size of 16px */
         }
         p {
             font-size: 16px;
