--- a/testing.html
+++ b/testing.html
@@ -15,7 +15,11 @@
         h1 {
             color: #333;
 	    font-size: 16px;  /* Heading 1 will have a font size of 16px */
+	    font-weight: normal;  /* Removes the boldness */
         }
+	h2 {
+            font-size: 16px;  /* Heading 2 will have a font size of 16px */
+    }
         p {
             font-size: 16px;
             line-height: 1.5;
