--- a/testing.html
+++ b/testing.html
@@ -11,6 +11,7 @@
         body {
             background-color: #E0E0FF;
             font-family: Arial, sans-serif;
+	    line-height: 1.5;  /* Ensures consistent line-height across all text */
         }
         h1 {
             color: #333;
